* update glfw to 3.3.6-1

--- a/glfw/PKGBUILD
+++ b/glfw/PKGBUILD
@@ -1,5 +1,5 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Sven-Hendrik Haase <svenstaro@gmail.com>
+# Maintainer: Sven-Hendrik Haase <svenstaro@archlinux.org>
 # Contributor: philefou <tuxication AT gmail DOT com>
 # Contributor: lindquist <tomas@famolsen.dk>
 # Contributor: Christoph Siegenthaler <csi@gmx.ch>
@@ -8,7 +8,7 @@
 
 pkgbase=glfw
 pkgname=('glfw-x11' 'glfw-wayland' 'glfw-doc')
-pkgver=3.3.4
+pkgver=3.3.6
 pkgrel=1
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.glfw.org/"
@@ -16,8 +16,8 @@ license=('custom:ZLIB')
 makedepends=('mesa' 'cmake' 'doxygen' 'vulkan-headers' 'vulkan-icd-loader'
              'extra-cmake-modules' 'wayland-protocols' 'libxi' 'libxrandr'
              'libxcursor' 'libxkbcommon' 'libxinerama')
-source=("https://github.com/glfw/glfw/archive/${pkgver}.tar.gz")
-sha512sums=('2b45ab72da7a2c007c0f42ccd56205f9684cfb980e2b1df127850cd057bb2b02ce02c7c64acd54cd433778e7017148f214afedf09badff9d2edf5f9b8d9d2701')
+source=("$pkgname-$pkgver.tar.gz::https://github.com/glfw/glfw/archive/${pkgver}.tar.gz")
+sha512sums=('4c295c5f4c02f6ede125fce67c52a97450f552f3985b664745bd8a836c1d6d69c04727c956fd26ec61f1e5fd9c074a28dcf6b1d1800f118444eef066f048b201')
 
 prepare() {
   cd "$srcdir/$pkgbase-$pkgver"
