--- a/openvdb/PKGBUILD
+++ b/openvdb/PKGBUILD
@@ -1,11 +1,11 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer : Sven-Hendrik Haase <svenstaro@gmail.com>
+# Maintainer : Sven-Hendrik Haase <svenstaro@archlinux.org>
 pkgname=openvdb
-pkgver=8.1.0
-pkgrel=1
+pkgver=9.0.0
+pkgrel=9
 pkgdesc='A large suite of tools for the efficient storage and manipulation of sparse volumetric data discretized on three-dimensional grids'
 url='https://github.com/dreamworksanimation/openvdb'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('MPL')
 depends=('boost-libs' 'intel-tbb' 'zlib' 'jemalloc' 'blosc' 'log4cplus')
 makedepends=('doxygen' 'boost' 'cmake' 'mesa' 'cppunit' 'glfw-x11' 'glu' 'python' 'python-numpy' 'ninja')
@@ -13,10 +13,13 @@ optdepends=('glfw: for tools'
             'glu: for tools'
             'python-numpy: python module')
 source=("$pkgname-$pkgver.tar.gz::https://github.com/dreamworksanimation/openvdb/archive/v${pkgver}.tar.gz")
-sha512sums=('081ccedb122ff9bd73e0cd7ff083ad0ff0165e0cf6305187edcbe90ff12f01ec085c91ad5c52c53596035e0c2afd5b8801e6c00374b0fc4b0cc111f5c7f37eb5')
+sha512sums=('1410b7b04b03fb09d6775ebe7b95e7c0a484d5f29c84203530ed30ccb7c061470be1abb93189010617342e57f3fecdd66a115c6d222024e68e2384a7fb196194')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
+  case "${CARCH}" in
+    riscv64) CXXFLAGS+=' -latomic' ;;
+  esac
 
   cmake \
     -Bbuild \
@@ -35,6 +38,9 @@ package() {
   cd "${srcdir}/${pkgname}-${pkgver}/build"
 
   DESTDIR="${pkgdir}" ninja install
+  # Try to workaround FS#72653 for now
+  mkdir -p "${pkgdir}"/usr/share/cmake/Modules/
+  ln -s /usr/lib/cmake/OpenVDB/{OpenVDBUtils,FindOpenVDB,FindBlosc}.cmake "${pkgdir}"/usr/share/cmake/Modules/
 }
 
 # vim:set sw=2 sts=2 et:
