--- a/cgns/PKGBUILD
+++ b/cgns/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=cgns
 pkgver=4.2.0
 pkgrel=1
 pkgdesc="Standard for recording and recovering computer data associated with the numerical solution of fluid dynamics equations"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://cgns.github.io/"
 license=(custom)
 depends=(tk hdf5 libxmu glu)
