* update firefox to 96.0.3-1

--- a/firefox/PKGBUILD
+++ b/firefox/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Jakub Schmidtke <sjakub@gmail.com>
 
 pkgname=firefox
-pkgver=96.0.2
+pkgver=96.0.3
 pkgrel=1
 pkgdesc="Standalone web browser from mozilla.org"
 arch=(x86_64 powerpc64le)
@@ -31,7 +31,7 @@ source=(https://archive.mozilla.org/pub/firefox/releases/$pkgver/source/firefox-
         flac-no-ffvpx.patch
         avoid-redefinition.patch
         firefox-pgo.diff)
-sha256sums=('d32d2afa9179a78e6ed97e15e0f39e372c0d662cb9614404db15e7616da31ab8'
+sha256sums=('1a741d6fcf20e6833a90169f41d29141ea4610f58b848e06091a683af6304dea'
             'SKIP'
             'a9e5264257041c0b968425b5c97436ba48e8d294e1a0f02c59c35461ea245c33'
             'a9b8b4a0a1f4a7b4af77d5fc70c2686d624038909263c795ecc81e0aec7711e9'
@@ -94,8 +94,8 @@ ac_add_options --enable-application=browser
 
 ac_add_options --prefix=/usr
 ac_add_options --enable-release
+ac_add_options --enable-optimize
 ac_add_options --enable-hardening
-ac_add_options --enable-optimize="${CXXFLAGS} -fpermissive"
 ac_add_options --enable-jemalloc
 ac_add_options --enable-linker=bfd
 #ac_add_optioms 	--without-wasm-sandboxed-libraries
