--- a/distcc/PKGBUILD
+++ b/distcc/PKGBUILD
@@ -7,14 +7,14 @@
 
 pkgname=distcc
 pkgver=3.4
-pkgrel=4
-_gccver=11.1.0 # Current GCC version, used for symlinks. See FS#69044
+pkgrel=4.1
+_gccver=11.2.0 # Current GCC version, used for symlinks. See FS#69044
 pkgdesc='Distributed compilation service for C, C++ and Objective-C'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://github.com/distcc/distcc'
 license=(GPL)
-depends=(popt python)
-makedepends=(avahi git gtk3)
+depends=(popt python avahi)
+makedepends=(git gtk3)
 optdepends=("gcc=$_gccver"
             'gtk3: for distccmon')
 backup=(etc/conf.d/distccd
