--- a/qt5/qt5-quickcontrols/PKGBUILD
+++ b/qt5/qt5-quickcontrols/PKGBUILD
@@ -6,7 +6,8 @@ pkgname=qt5-quickcontrols
 _qtver=5.15.2
 pkgver=${_qtver/-/}
 pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(riscv64)
 url='https://www.qt.io'
 license=('GPL3' 'LGPL3' 'FDL' 'custom')
 pkgdesc='Reusable Qt Quick based UI controls to create classic desktop-style user interfaces'
