--- a/botan/PKGBUILD
+++ b/botan/PKGBUILD
@@ -8,22 +8,22 @@
 # Contributor: Jack Lloyd <jack@randombit.net>
 
 pkgname=botan
-pkgver=2.18.1
+pkgver=2.19.1
 pkgrel=1
 pkgdesc='Crypto library written in C++'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://botan.randombit.net/'
 license=(BSD)
 depends=(xz sqlite)
 makedepends=(python boost openssl)
 optdepends=('python: for using botan2.py' 'boost-libs: for the botan executable')
-source=("https://botan.randombit.net/releases/Botan-${pkgver}.tar.xz"{,.asc})
-sha256sums=('f8c7b46222a857168a754a5cc329bb780504122b270018dda5304c98db28ae29'
+source=(https://botan.randombit.net/releases/Botan-${pkgver}.tar.xz{,.asc})
+sha256sums=('e26e00cfefda64082afdd540d3c537924f645d6a674afed2cd171005deff5560'
             'SKIP')
 validpgpkeys=('621DAF6411E1851C4CF9A2E16211EBF1EFBADFBC') # Botan Distribution Key
 
 build() {
-  cd "${pkgname^}-$pkgver"
+  cd ${pkgname^}-$pkgver
 
   ./configure.py \
     --prefix=/usr \
@@ -38,13 +38,12 @@ build() {
 }
 
 check() {
-  cd "${pkgname^}-$pkgver"
+  cd ${pkgname^}-$pkgver
 
   LD_LIBRARY_PATH="$PWD" ./botan-test
 }
 
 package() {
-  DESTDIR="$pkgdir" make -C "${pkgname^}-$pkgver" install
-  install -Dm644 "${pkgname^}-$pkgver/license.txt" \
-    "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
+  DESTDIR="$pkgdir" make -C ${pkgname^}-$pkgver install
+  install -Dm644 ${pkgname^}-$pkgver/license.txt "$pkgdir"/usr/share/licenses/$pkgname/LICENSE
 }
