--- a/crypto++/PKGBUILD
+++ b/crypto++/PKGBUILD
@@ -8,10 +8,10 @@
 # Contributor: jlvsimoes <jlvsimoes@oninet.pt>
 
 pkgname=crypto++
-pkgver=8.5.0
-pkgrel=2
+pkgver=8.6.0
+pkgrel=1
 pkgdesc='A free C++ class library of cryptographic schemes'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url=https://www.cryptopp.com/
 license=(custom)
 depends=(gcc-libs)
@@ -19,7 +19,7 @@ makedepends=(
   git
   unzip
 )
-_tag=f2102243e6fdd48c0b2a393a0993cca228f20573
+_tag=69bf6b53052b59ccb57ce068ce741988ae087317
 source=(git+https://github.com/weidai11/cryptopp.git#tag=${_tag})
 b2sums=(SKIP)
 validpgpkeys=(B8CC19802062211A508B2F5CCE0586AF1F8E37BD) # Jeffrey Walton <noloader@gmail.com>
