--- a/clementine/PKGBUILD
+++ b/clementine/PKGBUILD
@@ -5,8 +5,8 @@
 # Contributor: Dany Martineau <dany.luc.martineau@gmail.com>
 
 pkgname=clementine
-pkgver=1.4.0rc1+495+g10bf5dc17
-pkgrel=4
+pkgver=1.4.0rc1+776+gcefe81d0c
+pkgrel=1
 pkgdesc='A modern music player and library organizer'
 url=https://www.clementine-player.org/
 license=(GPL)
@@ -23,7 +23,7 @@ optdepends=(
   'gvfs: Various devices support'
 )
 source=("https://github.com/clementine-player/Clementine/releases/download/${pkgver//+/-}/$pkgname-${pkgver//+/-}.tar.xz")
-sha256sums=('b61c7051b6282af3a5717a4d9e755e1b53e08a04339c6eb4b6df77521606cc03')
+sha256sums=('32f09ce85aaba216c639fa3c28e508e7fa7610a4714017f9ef2205eddccbd422')
 
 prepare() {
   sed -e 's|CRYPTOPP cryptopp|CRYPTOPP libcryptopp|' -i $pkgname-${pkgver//+/-}/CMakeLists.txt # Fix crypto++ detection
