--- a/ell/PKGBUILD
+++ b/ell/PKGBUILD
@@ -3,29 +3,38 @@
 # Contributor: Jameson Pugh <imntreal@gmail.com>
 
 pkgname=ell
-pkgver=0.44
+pkgver=0.48
 pkgrel=1
 pkgdesc="Embedded Linux library"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://01.org/ell"
 #url="https://git.kernel.org/pub/scm/libs/ell/ell.git/"
 license=('LGPL2.1')
-depends=('glibc')
+depends=('gcc-libs')
 checkdepends=('dbus')
+options=('!lto')
 # https://mirrors.edge.kernel.org/pub/linux/libs/ell/sha256sums.asc
 source=(https://mirrors.edge.kernel.org/pub/linux/libs/$pkgname/$pkgname-$pkgver.tar.{xz,sign})
-sha256sums=('41a6f8fa4d285b52cb7a5a87bda3e7370ecaac02d94aaa7ec1a23f0480b8bc3f'
+sha256sums=('9894943042a5d6165d3e5cc354f92274fb1304004d02b4bee682ab6067cdbbd5'
             'SKIP')
 validpgpkeys=('E932D120BC2AEC444E558F0106CA9F5D1DCF2659') # "Marcel Holtmann <marcel@holtmann.org>"
 
 build() {
   cd "$pkgname-$pkgver"
-  ./configure --prefix=/usr
+#  export CFLAGS+=" -ffat-lto-objects"; export CXXFLAGS+=" -ffat-lto-objects"
+ ./configure --prefix=/usr
   make
 }
 
 check() {
   cd "$pkgname-$pkgver"
+
+# lto error also with export CFLAGS+=" -ffat-lto-objects"
+#/usr/bin/ld: /tmp/ccJicHpn.ltrans0.ltrans.o: in function `__wrap_l_getrandom':
+#<artificial>:(.text+0x3a71): undefined reference to `l_getrandom'
+#collect2: error: ld returned 1 exit status
+#make[3]: *** [Makefile:1629: unit/test-ecdh] Error 1
+
   make -k check
 }
 
