--- a/gdb/PKGBUILD
+++ b/gdb/PKGBUILD
@@ -8,24 +8,19 @@ pkgbase=gdb
 # gdb-common is a package that contains files common for all cross compiled versions
 # of gdb (for arm/avr/...)
 pkgname=(gdb gdb-common)
-pkgver=11.1
-pkgrel=2
+pkgver=11.2
+pkgrel=1
 pkgdesc='The GNU Debugger'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.gnu.org/software/gdb/'
 license=(GPL3)
 makedepends=(glibc gcc-libs texinfo python guile ncurses expat xz mpfr source-highlight
              readline)
-source=(https://ftp.gnu.org/gnu/gdb/${pkgname}-${pkgver}.tar.xz{,.sig}
-        sim-filter-out-SIGSTKSZ-PR-sim-28302.patch
-        mte-detection.patch::"https://sourceware.org/git/?p=binutils-gdb.git;a=patch;h=7fd8546853e3f0333ba8d8238413aba7eb45c69f;hp=5fff6115feae7aaa23c0ae8d144e1c8418ee2ee1")
-
-sha1sums=('6cb3361c7f2b22d6d2c25ab4992264aa41bc2471'
-          'SKIP'
-          '82f387d4ced66258bc0842e9ed2817f940b939f1')
-b2sums=('6a639f6533f4008bfb469c23a26c4fcd039f1bc5dd33745f4876344451beb595d7a8843caeb5db70214924624c5b999f8831237d459bebf1cb2d2866f8b41ee2'
-        'SKIP'
-        '22d6eafef30519ad3e27726ff4847f34bf24b14b7c28d087cdd63260bdbe432628d3efcba2242c7651ad03f937acf384e363e4de50eeced838aa44d76be0efa0')
+source=(https://ftp.gnu.org/gnu/gdb/${pkgname}-${pkgver}.tar.xz{,.sig})
+sha1sums=('7c72b1d4a38bb6e155aaad29f4c1abf818b4595d'
+          'SKIP')
+b2sums=('66ce7e12c99c33c8b4e6ababa673204aab525e72c90ba54cc34a5fd69948a09dc2a9ef2050764b2464544231b1d1a6431279c2877388551ca6fbf384a3f9b464'
+        'SKIP')
 validpgpkeys=('F40ADB902B24264AA42E50BF92EDB04BFF325CF3') # Joel Brobecker
 
 prepare() {
@@ -33,11 +28,6 @@ prepare() {
 
   # hack! - libiberty configure tests for header files using "$CPP $CPPFLAGS"
   sed -i "/ac_cpp=/s/\$CPPFLAGS/\$CPPFLAGS -O2/" libiberty/configure
-
-  # gdb 11.1 with glibc >=2.34
-  patch -Np1 -i ${srcdir}/sim-filter-out-SIGSTKSZ-PR-sim-28302.patch
-
-  patch -p1 < ../mte-detection.patch # FS#72583
 }
 
 build() {
@@ -81,11 +71,3 @@ package_gdb() {
 }
 
 # vim: ts=2 sw=2 et:
-sha1sums=('6cb3361c7f2b22d6d2c25ab4992264aa41bc2471'
-          'SKIP'
-          '53ee4a91f59a5dff0ceb62492735923704f2d8e2'
-          '1b773465886dd06f09d0e7a50b3a01de52adc754')
-b2sums=('6a639f6533f4008bfb469c23a26c4fcd039f1bc5dd33745f4876344451beb595d7a8843caeb5db70214924624c5b999f8831237d459bebf1cb2d2866f8b41ee2'
-        'SKIP'
-        'a098ec064ebe4cc952a33b8cf274516c5aceb21457119e2336095ce312762b0cd43950e4801ac093de7d7a0c09d91adc363329ab5c56d96f5e17b5102a9ddce7'
-        'f23983de92b935423d14703d3dd2c0c75f11ae95d8a5f94be929ccce501d4eeebdbc6c6108c7a625f6ed4e8c09a25bd7dcf4f864a81ef411fd3821bccf3730bd')
