--- a/dtc/PKGBUILD
+++ b/dtc/PKGBUILD
@@ -4,24 +4,28 @@
 
 pkgname=dtc
 pkgver=1.6.1
-pkgrel=1
+pkgrel=3
 pkgdesc='Device Tree Compiler'
 url='https://www.devicetree.org/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL2)
 makedepends=(swig python)
 checkdepends=(valgrind)
-source=(https://www.kernel.org/pub/software/utils/dtc/dtc-$pkgver.tar.xz)
-sha256sums=('65cec529893659a49a89740bb362f507a3b94fc8cd791e76a8d6a2b6f3203473')
+options=(!makeflags)
+source=(https://www.kernel.org/pub/software/utils/dtc/dtc-$pkgver.tar.xz
+        python310.patch)
+sha256sums=('65cec529893659a49a89740bb362f507a3b94fc8cd791e76a8d6a2b6f3203473'
+            '767b6931887018a1dd7d41bfebebd16ab78a35de06a5689f530e376ab8c6b037')
 
 prepare() {
   cd dtc-$pkgver
+  patch -Np1 -i ../python310.patch
   sed -i 's/-Werror//' Makefile
 }
 
 build() {
   cd dtc-$pkgver
-  make -j1
+  make
 }
 
 check() {
@@ -31,5 +35,5 @@ check() {
 
 package() {
   cd dtc-$pkgver
-  DESTDIR="$pkgdir" make SETUP_PREFIX="$pkgdir/usr" PREFIX="$pkgdir/usr" install -j1
+  DESTDIR="$pkgdir" make SETUP_PREFIX="$pkgdir/usr" PREFIX="$pkgdir/usr" install
 }
