--- a/gc/PKGBUILD
+++ b/gc/PKGBUILD
@@ -3,22 +3,22 @@
 # Contributor: dorphell <dorphell@gmx.net>
 
 pkgname=gc
-pkgver=8.0.4
-pkgrel=4
+pkgver=8.2.0
+pkgrel=2
 pkgdesc="A garbage collector for C and C++"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.hboehm.info/gc/"
 license=('GPL')
 depends=('gcc-libs')
 source=(https://github.com/ivmai/bdwgc/releases/download/v${pkgver}/${pkgname}-${pkgver}.tar.gz
-        add_stack_bottom_feature.patch::https://github.com/ivmai/bdwgc/commit/5668de71107022a316ee967162bc16c10754b9ce.patch)
-sha512sums=('57ccca15c6e50048d306a30de06c1a844f36103a84c2d1c17cbccbbc0001e17915488baec79737449982da99ce5d14ce527176afae9ae153cbbb5a19d986366e'
-            'de0bb19f44e0a20f811005effea54b62a686ba119ed121ded002cc9e5847287fc4d6ab8bfb4a75c928c58ed72aa88b3eac068987cfe224778d923cf96adb8cd0')
+        gc-missing-header.patch::https://patch-diff.githubusercontent.com/raw/ivmai/bdwgc/pull/389.patch)
+sha512sums=('ff781360bca667f1f95fbfed073e9035f63134cac1bda4f7e4217664a3713c2846f750a3ce92732972c0435c69355b051f6e8eb6f2698b0d48d9107ff960bacf'
+            'fc1bb2c8b412f22d6c861c2f89f8cf8ed3b8f053f935a766aad80ea05016401b72580250f37afd180283090fedc4e6257272c8fab610130d13b67cacbd445142')
 
 prepare() {
-  cd ${pkgname}-${pkgver}
-
-  patch -p1 < ../add_stack_bottom_feature.patch # needed for Crystal https://github.com/crystal-lang/crystal/issues/8213
+  cd $pkgname-$pkgver
+  patch -p1 < ../gc-missing-header.patch # Install missing header
+  ./autogen.sh
 }
 
 build() {
@@ -40,5 +40,3 @@ package() {
   sed 's|GC_MALLOC 1L|gc 3|g' doc/gc.man |
     install -Dm644 /dev/stdin "${pkgdir}/usr/share/man/man3/gc.3"
 }
-sha512sums=('57ccca15c6e50048d306a30de06c1a844f36103a84c2d1c17cbccbbc0001e17915488baec79737449982da99ce5d14ce527176afae9ae153cbbb5a19d986366e'
-            'e5207af31778286834ffd00a700ab4bbc037586823d05eeef27c2273ac128fa19354805c5e6c4502cefeab866c049a4deaf996707faa7b5797eddfc07c765813')
