* update fstrm to 0.6.1-1

--- a/fstrm/PKGBUILD
+++ b/fstrm/PKGBUILD
@@ -6,6 +6,7 @@ pkgver=0.6.1
 pkgrel=1
 pkgdesc="C implementation of the Frame Streams data transport protocol"
 arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
 url="https://github.com/farsightsec/fstrm"
 license=(Apache)
 depends=(libevent)
