--- a/whois/PKGBUILD
+++ b/whois/PKGBUILD
@@ -5,10 +5,10 @@
 # Contributor: Tom Newsom <Jeepster@gmx.co.uk>
 
 pkgname=whois
-pkgver=5.5.10
+pkgver=5.5.11
 pkgrel=1
 pkgdesc="Intelligent WHOIS client"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/rfc1036/whois"
 license=('GPL')
 depends=('libidn2')
