--- a/games/wesnoth/PKGBUILD
+++ b/games/wesnoth/PKGBUILD
@@ -1,5 +1,5 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Sven-Hendrik Haase <svenstaro@gmail.com>
+# Maintainer: Sven-Hendrik Haase <svenstaro@archlinux.org>
 # Contributor: Jan de Groot <jgc@archlinux.org>
 # Contributor: Tobias Powalowski <tpowa@archlinux.org>
 # Contributor: Jacobo Arvelo <unix4all@ya.com>
@@ -7,9 +7,9 @@
 
 pkgname=wesnoth
 # NOTE: Odd minor versions are unstable! Do not package those.
-pkgver=1.14.17
+pkgver=1.16.1
 epoch=1
-pkgrel=1
+pkgrel=2
 pkgdesc="A turn-based strategy game on a fantasy world"
 arch=(x86_64 powerpc64le powerpc)
 license=('GPL')
@@ -20,11 +20,6 @@ replaces=('wesnoth-data')
 options=(!emptydirs)
 source=("git://github.com/wesnoth/wesnoth.git#tag=${pkgver}")
 sha512sums=('SKIP')
-
-prepare() {
-  cd $pkgname
-  git cherry-pick -n 9d0e3bae096563297c9f51355968f27a67dbfdec # Fix build with boost 1.70
-}
 
 build() {
   cd "$pkgname"
