--- a/libgadu/PKGBUILD
+++ b/libgadu/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=libgadu
 pkgver=1.12.2
-pkgrel=13
+pkgrel=13.1
 pkgdesc="Client-side library for the Gadu-Gadu protocol"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://libgadu.net/"
 license=('LGPL2.1')
 depends=('gnutls' 'protobuf-c')
