--- a/opencv/PKGBUILD
+++ b/opencv/PKGBUILD
@@ -5,14 +5,16 @@
 
 pkgbase=opencv
 pkgname=(opencv opencv-samples python-opencv)
-pkgver=4.5.3
-pkgrel=5
+[ "${CARCH}" = 'x86_64' ] && pkgnane+=(opencv-cuda)
+pkgver=4.5.5
+pkgrel=1
 pkgdesc='Open Source Computer Vision Library'
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=(BSD)
 url='https://opencv.org/'
-depends=(tbb openexr gst-plugins-base libdc1394 cblas lapack libgphoto2 openjpeg2 ffmpeg)
-makedepends=(cmake python-numpy python-setuptools mesa eigen hdf5 lapacke qt5-base vtk glew ant java-environment)
+depends=(tbb openexr gst-plugins-base libdc1394 cblas lapack libgphoto2 openjpeg2 ffmpeg protobuf)
+makedepends=(cmake python-numpy python-setuptools mesa eigen hdf5 lapacke qt5-base vtk glew ant java-environment pugixml openmpi fmt)
+makedepends_x86_64=(cudnn)
 optdepends=('opencv-samples: samples'
             'vtk: for the viz module'
             'glew: for the viz module'
@@ -22,46 +24,55 @@ optdepends=('opencv-samples: samples'
             'java-runtime: Java interface')
 source=(https://github.com/opencv/opencv/archive/$pkgver/$pkgname-$pkgver.tar.gz
         https://github.com/opencv/opencv_contrib/archive/$pkgver/opencv_contrib-$pkgver.tar.gz
-        opencv-lapack-3.10.patch)
-sha256sums=('77f616ae4bea416674d8c373984b20c8bd55e7db887fd38c6df73463a0647bab'
-            '73da052fd10e73aaba2560eaff10cc5177e2dcc58b27f8aedf7c649e24c233bc'
-            'f83c64f2731a39910d0d4a48898dd04e4aca5c22f746b7b0ead003992ae11199')
+        vtk9.patch)
+sha256sums=('a1cfdcf6619387ca9e232687504da996aaa9f7b5689986b8331ec02cb61d28ad'
+            'a97c2eaecf7a23c6dbd119a609c6d7fae903e5f9ff5f1fe678933e01c67a6c11'
+            'f35a2d4ea0d6212c7798659e59eda2cb0b5bc858360f7ce9c696c77d3029668e')
 
 prepare() {
-  patch -d $pkgname-$pkgver -p1 < opencv-lapack-3.10.patch # Fix build with LAPACK 3.10
+  patch -d $pkgname-$pkgver -p1 < vtk9.patch # Don't require all vtk optdepends
 }
 
 build() {
   export JAVA_HOME="/usr/lib/jvm/default"
   # cmake's FindLAPACK doesn't add cblas to LAPACK_LIBRARIES, so we need to specify them manually
-  _pythonpath=`python -c "from sysconfig import get_path; print(get_path('platlib'))"`
-  cmake -B build -S $pkgname-$pkgver \
-    -DWITH_OPENCL=ON \
-    -DWITH_OPENGL=ON \
-    -DWITH_TBB=ON \
-    -DWITH_VULKAN=ON \
-    -DWITH_QT=ON \
-    -DBUILD_WITH_DEBUG_INFO=OFF \
-    -DBUILD_TESTS=OFF \
-    -DBUILD_PERF_TESTS=OFF \
-    -DBUILD_EXAMPLES=ON \
-    -DINSTALL_C_EXAMPLES=ON \
-    -DINSTALL_PYTHON_EXAMPLES=ON \
-    -DCMAKE_INSTALL_PREFIX=/usr \
-    -DCPU_BASELINE_DISABLE=SSE3 \
-    -DCPU_BASELINE_DISABLE=SSE2 \
-    -DOPENCV_EXTRA_MODULES_PATH="$srcdir/opencv_contrib-$pkgver/modules" \
-    -DOPENCV_SKIP_PYTHON_LOADER=ON \
-    -DOPENCV_PYTHON3_INSTALL_PATH=$_pythonpath \
-    -DLAPACK_LIBRARIES="/usr/lib/liblapack.so;/usr/lib/libblas.so;/usr/lib/libcblas.so" \
-    -DLAPACK_CBLAS_H="/usr/include/cblas.h" \
-    -DLAPACK_LAPACKE_H="/usr/include/lapacke.h" \
-    -DOPENCV_GENERATE_PKGCONFIG=ON \
-    -DOPENCV_ENABLE_NONFREE=ON \
-    -DOPENCV_JNI_INSTALL_PATH=lib \
-    -DOPENCV_GENERATE_SETUPVARS=OFF \
-    -DEIGEN_INCLUDE_PATH=/usr/include/eigen3
+  _opts="-DWITH_OPENCL=ON \
+         -DWITH_OPENGL=ON \
+         -DWITH_TBB=ON \
+         -DWITH_VULKAN=ON \
+         -DWITH_QT=ON \
+         -DBUILD_WITH_DEBUG_INFO=OFF \
+         -DBUILD_TESTS=OFF \
+         -DBUILD_PERF_TESTS=OFF \
+         -DBUILD_EXAMPLES=ON \
+         -DBUILD_PROTOBUF=OFF \
+         -DPROTOBUF_UPDATE_FILES=ON \
+         -DINSTALL_C_EXAMPLES=ON \
+         -DINSTALL_PYTHON_EXAMPLES=ON \
+         -DCMAKE_INSTALL_PREFIX=/usr \
+         -DCPU_BASELINE_DISABLE=SSE3 \
+         -DCPU_BASELINE_DISABLE=SSE2 \
+         -DOPENCV_EXTRA_MODULES_PATH=$srcdir/opencv_contrib-$pkgver/modules \
+         -DOPENCV_SKIP_PYTHON_LOADER=ON \
+         -DLAPACK_LIBRARIES=/usr/lib/liblapack.so;/usr/lib/libblas.so;/usr/lib/libcblas.so \
+         -DLAPACK_CBLAS_H=/usr/include/cblas.h \
+         -DLAPACK_LAPACKE_H=/usr/include/lapacke.h \
+         -DOPENCV_GENERATE_PKGCONFIG=ON \
+         -DOPENCV_ENABLE_NONFREE=ON \
+         -DOPENCV_JNI_INSTALL_PATH=lib \
+         -DOPENCV_GENERATE_SETUPVARS=OFF \
+         -DEIGEN_INCLUDE_PATH=/usr/include/eigen3"
+
+  cmake -B build -S $pkgname-$pkgver $_opts
   cmake --build build
+
+  if [ "${CARCH}" ]; then
+    CFLAGS="${CFLAGS} -fno-lto" CXXFLAGS="${CXXFLAGS} -fno-lto" LDFLAGS="${LDFLAGS} -fno-lto" \
+    cmake -B build-cuda -S $pkgname-$pkgver $_opts \
+      -DWITH_CUDA=ON \
+      -DWITH_CUDNN=ON
+    cmake --build build-cuda
+  fi
 }
 
 package_opencv() {
@@ -82,8 +93,8 @@ package_opencv() {
 }
 
 package_opencv-samples() {
-  pkgdesc+=" (samples)"
-  depends=("opencv=$pkgver")
+  pkgdesc+=' (samples)'
+  depends=(opencv)
   unset optdepends
 
   mkdir -p "$pkgdir"/usr/share/opencv4
@@ -94,12 +105,34 @@ package_opencv-samples() {
 }
 
 package_python-opencv() {
-  pkgdesc="Python bindings for OpenCV"
-  depends=(python-numpy opencv vtk glew qt5-base hdf5)
+  pkgdesc='Python bindings for OpenCV'
+  depends=(python-numpy opencv vtk glew qt5-base hdf5 jsoncpp openmpi pugixml fmt)
   unset optdepends
 
   DESTDIR="$pkgdir" cmake --install build/modules/python3
 
   # install license file
   install -Dm644 $pkgbase-$pkgver/LICENSE -t "$pkgdir"/usr/share/licenses/$pkgname
+}
+
+package_opencv-cuda() {
+  pkgdesc+=' (with CUDA support)'
+  depends+=(cudnn)
+  conflicts=(opencv)
+  provides=(opencv=$pkgver)
+
+  DESTDIR="$pkgdir" cmake --install build-cuda
+
+  # install license file
+  install -Dm644 $pkgbase-$pkgver/LICENSE -t "$pkgdir"/usr/share/licenses/$pkgname
+
+  # Split samples
+  rm -r "$pkgdir"/usr/share/opencv4/samples
+
+  # Add java symlinks expected by some binary blobs
+  ln -sr "$pkgdir"/usr/share/java/{opencv4/opencv-${pkgver//./},opencv}.jar
+  ln -sr "$pkgdir"/usr/lib/{libopencv_java${pkgver//./},libopencv_java}.so
+
+  # Split Python bindings
+  rm -r "$pkgdir"/usr/lib/python3*
 }
