--- a/gn/PKGBUILD
+++ b/gn/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Evangelos Foutras <evangelos@foutrelis.com>
 
 pkgname=gn
-pkgver=0.1934.69ec4fca
-_commit=69ec4fca1fa69ddadae13f9e6b7507efa0675263
+pkgver=0.1938.0153d369
+_commit=0153d369bbccc908f4da4993b1ba82728055926a
 pkgrel=1
 pkgdesc="Meta-build system that generates build files for Ninja"
 arch=(x86_64 powerpc64le powerpc)
@@ -16,7 +16,7 @@ sha256sums=('SKIP')
 
 pkgver() {
   cd $pkgname
-  echo 0.$(git rev-list --count initial-commit..).$(git rev-parse --short HEAD)
+  echo 0.$(git rev-list --count initial-commit..).$(git rev-parse --short=8 HEAD)
 }
 
 build() {
