* update vim to 8.2.4106-1

--- a/vim/PKGBUILD
+++ b/vim/PKGBUILD
@@ -9,25 +9,25 @@
 # Contributor: Eli Schwartz <eschwartz@archlinux.org>
 
 pkgbase=vim
-pkgname=('vim' 'vim-runtime')
-pkgver=8.2.3441
+pkgname=('vim' 'gvim' 'vim-runtime')
+pkgver=8.2.4106
 _versiondir=82
 pkgrel=1
 pkgdesc='Vi Improved, a highly configurable, improved version of the vi text editor'
 url='https://www.vim.org'
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('custom:vim')
-makedepends=('glibc' 'libgcrypt' 'gpm' 'python2' 'python' 'ruby' 'lua'
-             'gawk' 'tcl' 'pcre' 'zlib')
+makedepends=('glibc' 'libgcrypt' 'gpm' 'python' 'ruby' 'libxt' 'gtk3' 'lua'
+             'gawk' 'tcl' 'pcre' 'zlib' 'libcanberra')
 source=(https://github.com/vim/vim/archive/v${pkgver}/${pkgbase}-${pkgver}.tar.gz
         vimrc
         archlinux.vim
         vimdoc.hook)
-sha256sums=('3db6c3af32b741c2e618358bbf002cffe9db2ab8d21f9ea277110fce54fec4d2'
+sha256sums=('49dc438e8cef4eae387ab2cdd79eb1f0e1ac47acfa8eb25cd209085fc2896179'
             'b16e85e457397ab2043a7ee0a3c84307c6b4eac157fd0b721694761f25b3ed5b'
             'cc3d931129854c298eb22e993ec14c2ad86cc1e70a08a64496f5e06559289972'
             '8e9656934d9d7793063230d15a689e10455e6db9b9fe73afa0f294792795d8ae')
-sha512sums=('1d85fdb2d6b50f0b786a8436d091a084b9ca0bb43c3cfbdeaa329b231b82ea790589b7bae6bdb6e60b2c12c97cc4178ab8e61677e0c1070c805021cfdbc34d5f'
+sha512sums=('4183fd3a5eb4a68a6199cb55846e0beb1c5145bd9103ba26e802e11e1e61ed3834c14d413cf67b8936ef165585fd19dfa54b8767a9717fb5bcdceb4785dc01c1'
             '4b5bed0813f22af9e158ea9aa56a4a9862dd786ba2d201f20159ccf652da6190164aaed0b6b7217d578f7b25c33a8adcc307bfcf3caa8d173a7ff29e2a00fee7'
             'fe091d289d876f45319c898f6021ef86d6a238b540c225a279c46efc5c36fa7d868cd0cee73a111811c4be90df160f85340bb251be3a437727dbe5c699950363'
             'a02ad0d66f300160911aeb81d8886c6c558436ac4ee3fcd161dd65c6b1e5d1f41b9005a7f5bb5ba68d57027fc1c8e43daabf055bd6207fb5a216a67f758df8d1')
@@ -58,12 +58,34 @@ build() {
       --enable-cscope \
       --enable-netbeans \
       --enable-perlinterp=dynamic \
-      --enable-pythoninterp=dynamic \
       --enable-python3interp=dynamic \
       --enable-rubyinterp=dynamic \
       --enable-luainterp=dynamic \
       --enable-tclinterp=dynamic \
       --disable-canberra
+    make
+  )
+
+  echo "Building gvim..."
+  (cd gvim-${pkgver}
+    ./configure \
+      --prefix=/usr \
+      --localstatedir=/var/lib/vim \
+      --with-features=huge \
+      --with-compiledby='Arch Linux' \
+      --enable-gpm \
+      --enable-acl \
+      --with-x=yes \
+      --enable-gui=gtk3 \
+      --enable-multibyte \
+      --enable-cscope \
+      --enable-netbeans \
+      --enable-perlinterp=dynamic \
+      --enable-python3interp=dynamic \
+      --enable-rubyinterp=dynamic \
+      --enable-luainterp=dynamic \
+      --enable-tclinterp=dynamic \
+      --enable-canberra
     make
   )
 }
@@ -95,10 +117,6 @@ package_vim-runtime() {
   install -Dm 644 "${srcdir}"/archlinux.vim \
     "${pkgdir}"/usr/share/vim/vimfiles/archlinux.vim
 
-  # rgb.txt file
-  install -Dm 644 runtime/rgb.txt \
-    "${pkgdir}"/usr/share/vim/vim${_versiondir}/rgb.txt
-
   # no desktop files and icons
   rm -r "${pkgdir}"/usr/share/{applications,icons}
 
@@ -114,8 +132,7 @@ package_vim-runtime() {
 package_vim() {
   depends=("vim-runtime=${pkgver}-${pkgrel}" 'gpm' 'acl' 'glibc' 'libgcrypt' 'pcre'
            'zlib')
-  optdepends=('python2: Python 2 language support'
-              'python: Python 3 language support'
+  optdepends=('python: Python 3 language support'
               'ruby: Ruby language support'
               'lua: Lua language support'
               'perl: Perl language support'
@@ -146,6 +163,40 @@ package_vim() {
 
   # license
   install -Dm 644 runtime/doc/uganda.txt \
+    "${pkgdir}"/usr/share/licenses/${pkgname}/license.txt
+}
+
+package_gvim() {
+  pkgdesc+=' (with advanced features, such as a GUI)'
+  depends=("vim-runtime=${pkgver}-${pkgrel}" 'gpm' 'libxt' 'gtk3' 'glibc' 'libgcrypt' 'pcre'
+           'zlib' 'libcanberra')
+  optdepends=('python: Python 3 language support'
+              'ruby: Ruby language support'
+              'lua: Lua language support'
+              'perl: Perl language support'
+              'tcl: Tcl language support')
+  provides=("vim=${pkgver}-${pkgrel}" "xxd" 'vim-plugin-runtime')
+  conflicts=('vim-minimal' 'vim')
+  replaces=('gvim-python3')
+
+  cd gvim-${pkgver}
+  make -j1 VIMRCLOC=/etc DESTDIR="${pkgdir}" install
+
+  # provided by (n)vi in core
+  rm "${pkgdir}"/usr/bin/{ex,view}
+
+  # delete some manpages
+  find "${pkgdir}"/usr/share/man -type d -name 'man1' 2>/dev/null | \
+    while read _mandir; do
+    cd "${_mandir}"
+    rm -f ex.1 view.1 # provided by (n)vi
+  done
+
+  # need to remove since this is provided by vim-runtime
+  rm -r "${pkgdir}"/usr/share/vim
+
+  # license
+   install -Dm 644 runtime/doc/uganda.txt \
     "${pkgdir}"/usr/share/licenses/${pkgname}/license.txt
 }
 
