--- a/ffmpeg/PKGBUILD
+++ b/ffmpeg/PKGBUILD
@@ -6,7 +6,7 @@
 # Contributor: Paul Mattal <paul@archlinux.org>
 
 pkgname=ffmpeg
-pkgver=4.4.1
+pkgver=5.0
 pkgrel=1
 epoch=2
 pkgdesc='Complete solution to record, convert and stream audio and video'
@@ -92,16 +92,18 @@ provides=(
   libswresample.so
   libswscale.so
 )
-_tag=7e0d640edf6c3eee1816b105c2f7498c4f948e74
+_tag=390d6853d0ef408007feb39c0040682c81c02751
 source=(
   git+https://git.ffmpeg.org/ffmpeg.git#tag=${_tag}
   vmaf-model-path.patch
   powerpc-altivec.patch
+  add-av_stream_get_first_dts-for-chromium.patch
 )
 sha256sums=(
   SKIP
   8dff51f84a5f7460f8893f0514812f5d2bd668c3276ef7ab7713c99b71d7bd8d
   116119f9a9f3207c20b848f7fcfad0f8c01961dc5a2a7b4e82909c9371c0470d
+  91973c465f01446a999f278f0c2a3763304994dba1ac35de0e4c72f12f39409e
 )
 
 pkgver() {
@@ -114,6 +116,9 @@ prepare() {
   cd ffmpeg
   git cherry-pick -n 988f2e9eb063db7c1a678729f58aab6eba59a55b # fix nvenc on older gpus
   patch -Np1 -i "${srcdir}"/vmaf-model-path.patch
+
+  # https://crbug.com/1251779
+  patch -Np1 -i "${srcdir}"/add-av_stream_get_first_dts-for-chromium.patch
 }
 
 build() {
