* update freerdp to 2:2.5.0-1

--- a/freerdp/PKGBUILD
+++ b/freerdp/PKGBUILD
@@ -5,7 +5,7 @@
 
 _name=FreeRDP
 pkgname=freerdp
-pkgver=2.4.0
+pkgver=2.5.0
 pkgrel=1
 epoch=2
 pkgdesc="Free implementation of the Remote Desktop Protocol (RDP)"
@@ -16,17 +16,20 @@ depends=('dbus-glib' 'glibc' 'gstreamer' 'gst-plugins-base-libs' 'libcups'
 'libgssglue' 'libx11' 'libxcursor' 'libxext' 'libxdamage' 'libxfixes'
 'libxkbcommon' 'libxi' 'libxinerama' 'libxkbfile' 'libxrandr' 'libxrender'
 'libxtst' 'openssl' 'pcsclite' 'wayland')
-makedepends=('alsa-lib' 'cmake' 'docbook-xsl' 'ffmpeg' 'krb5' 'libjpeg-turbo'
-'libpulse' 'libusb' 'pam' 'systemd-libs' 'xmlto' 'xorgproto')
+makedepends=('alsa-lib' 'cmake' 'docbook-xsl' 'ffmpeg' 'icu' 'krb5'
+'libjpeg-turbo' 'libpulse' 'libusb' 'pam' 'systemd-libs' 'xmlto' 'xorgproto')
 provides=('libfreerdp2.so' 'libfreerdp-client2.so' 'libfreerdp-server2'
 'libfreerdp-shadow2.so' 'libfreerdp-shadow-subsystem2.so' 'libwinpr2.so'
 'libwinpr-tools2.so' 'libuwac0.so')
 source=("$pkgname-$pkgver.tar.gz::https://github.com/${pkgname}/${pkgname}/archive/${pkgver}.tar.gz"
-        "$pkgname-2.0.0-manpage_formatting.patch")
-sha512sums=('fb63c40dcdbbc16bf1d591227ec04537f96f0d5098be28a7b8b0158c83803941f1737604473e6fec45e85ec951bf4309c7b119a282ed2a7902f095757da67b20'
-            'd960e042d1527b5d5721136b6b20fc36f65beafd010581ea5b908668537fe9fe622de6689a29c0274b0d6f1e513615f0d02e56c1d1d1e613d093e145d39af8d7')
-b2sums=('841218376f4a3b017f3499122062742faef6e8251ca3bd1439210943983bf2b6ce843eed57ec7357e9067fddc17a99177bf970b328e60a771e6eac60ba1c0da9'
-        '8242fe56ba9cf5352d836f656645a46142c1aecea3e8200203117a0cccc226135591c16fa0a24cfa196ade7b703832ff6871a948fd3bbbcc1d9c6df9885dc360')
+        "$pkgname-2.0.0-manpage_formatting.patch"
+        "$pkgname-${pkgver}-ffmpeg-5.0.patch::https://patch-diff.githubusercontent.com/raw/FreeRDP/FreeRDP/pull/7578.patch")
+sha512sums=('7720306c8d0915578f6758f46ba0e0b8a81bbdcd1c80e08711576605142467f6735f644099e79a05113959fb30cd1070ca138a523537a41a7102880daf89c04c'
+            'd960e042d1527b5d5721136b6b20fc36f65beafd010581ea5b908668537fe9fe622de6689a29c0274b0d6f1e513615f0d02e56c1d1d1e613d093e145d39af8d7'
+            'dec433aaadbbdc3a29c0886f785865d12506827e529febb45be83ff4aa4b1df2934da79051310d631d8d23754af144f86770184f46c701825a57ad62fb6cc023')
+b2sums=('c81262e9963525c83960f8ca95b142787787ce844633ce6aa81820be90575dd59f802dd277cb950de12c120f25caa9b189c0bf942c91af9119f3f4338b0796d1'
+        '8242fe56ba9cf5352d836f656645a46142c1aecea3e8200203117a0cccc226135591c16fa0a24cfa196ade7b703832ff6871a948fd3bbbcc1d9c6df9885dc360'
+        'ff531c9be955759457741093f1bb2b80ae96ac87d12b434f9ed321899f6d2c5a61ecfb625f9305b1507e75af7a1697ecf6f0e1c08e54321ac2608feee09a2fab')
 
 prepare() {
   mv -v "${_name}-${pkgver}" "${pkgname}-${pkgver}"
@@ -34,6 +37,9 @@ prepare() {
   # fix man page formatting:
   # https://bugs.archlinux.org/task/64814
   patch -Np1 -i "../${pkgname}-2.0.0-manpage_formatting.patch"
+
+  # ffmpeg 5.0
+  patch -Np1 -i "../$pkgname-${pkgver}-ffmpeg-5.0.patch"
 }
 
 build() {
@@ -47,6 +53,7 @@ build() {
         -DWITH_PULSE=ON \
         -DWITH_CUPS=ON \
         -DWITH_PCSC=ON \
+        -DWITH_ICU=ON \
         -DWITH_JPEG=ON \
         -DWITH_SERVER=ON \
         -DWITH_SWSCALE=ON \
@@ -61,9 +68,9 @@ build() {
 }
 
 package() {
-  depends+=('libasound.so' 'libavcodec.so' 'libavutil.so' 'libjpeg.so' 'libpam.so'
-  'libpulse.so' 'libswscale.so' 'libswresample.so' 'libsystemd.so'
-  'libusb-1.0.so')
+  depends+=('libasound.so' 'libavcodec.so' 'libavutil.so' 'libicuuc.so'
+  'libjpeg.so' 'libpam.so' 'libpulse.so' 'libswscale.so' 'libswresample.so'
+  'libsystemd.so' 'libusb-1.0.so')
   cd "${pkgname}-${pkgver}"
   make DESTDIR="${pkgdir}" install -C build
   install -vDm 644 {ChangeLog,README.md} \
