--- a/ijs/PKGBUILD
+++ b/ijs/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=ijs
 pkgver=0.35
 pkgrel=3
 pkgdesc="a library which implements a protocol for transmission of raster page images"
-arch=('x86_64' 'powerpc64le' 'powerpc')
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.openprinting.org/download/ijs/"
 license=('GPL')
 depends=('glibc' 'sh')
