* update gst-plugins-bad to 1.18.5-5

--- a/gst-plugins-bad/PKGBUILD
+++ b/gst-plugins-bad/PKGBUILD
@@ -55,6 +55,10 @@ prepare() {
 }
 
 build() {
+  case "${CARCH}" in
+    riscv64) MESON_PLATFORM_FLAGS="-Dwpe=disabled" ;;
+  esac
+
   arch-meson $pkgbase build \
     -D directfb=disabled \
     -D doc=disabled \
@@ -75,7 +79,7 @@ build() {
     -D gobject-cast-checks=disabled \
     -D svthevcenc=disabled \
     -D package-name="GStreamer Bad Plugins (Arch POWER)" \
-    -D package-origin="https://www.archlinuxpower.org/"
+    -D package-origin="https://www.archlinuxpower.org/" ${MESON_PLATFORM_FLAGS}
   meson compile -C build
 }
 
@@ -112,7 +116,9 @@ package_gst-plugins-bad-libs() {
   mv -t opencv/include/gstreamer-1.0/gst \
     "$pkgdir"/usr/include/gstreamer-1.0/gst/opencv
 
-  for _x in opencv wpe; do
+  WPE=''
+  [ ! "${CARCH}" = 'riscv64' ] && WPE=wpe
+  for _x in opencv ${WPE}; do
     mkdir -p "$_x/lib/gstreamer-1.0"
     _f="lib/gstreamer-1.0/libgst${_x}.so"
     mv "$pkgdir/usr/$_f" "$_x/$_f"
