* update chromium to 97.0.4692.99-3.1

--- a/chromium/PKGBUILD
+++ b/chromium/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=chromium
 pkgver=97.0.4692.99
-pkgrel=3
+pkgrel=3.1
 _launcher_ver=8
 _gcc_patchset=4
 pkgdesc="A web browser built for speed, simplicity, and security"
@@ -34,7 +34,17 @@ source=(https://commondatastorage.googleapis.com/chromium-browser-official/$pkgn
         xxx-ppc64le-libvpx.patch
         xxx-ppc64le-sandbox-linux-stat.patch
         xxx-ppc64le-support.patch
-        xxx-ppc64le-swiftshader.patch)
+        xxx-ppc64le-swiftshader.patch
+        libc_malloc.patch
+        cursed^Uscoped_file.patch
+        fix-bits-stdint-intn-include.patch
+        fix-narrowing-cast.patch
+        no-execinfo.patch
+        no-getcontext.patch
+        sandbox-membarrier.patch
+        sandbox-sched_getparam.patch
+        webrtc-include.patch
+        webrtc-size_t.patch)
 sha256sums=('c91bae205705b367f2cfc1f72ce1ee99b2ceb5edfc584e15c60a6ab5ff01ecba'
             '213e50f48b67feb4441078d50b0fd431df34323be15be97c55302d3fdac4483a'
             '7af5c0a55a20c0fb496b2f4448d89203a83bb1914754d864460e55e68731ef0b'
@@ -47,7 +57,17 @@ sha256sums=('c91bae205705b367f2cfc1f72ce1ee99b2ceb5edfc584e15c60a6ab5ff01ecba'
             '6b7ad5cd5d7d61b5441810688fc5bd99cb8198291b2252451d352a620a2e09bb'
             '16361d737c14135e464bf52e09d0b79c0e9ef84c364253e08f435e8e72d7b5c9'
             '796d4c650ab71b6ba0ef043b060398673cb252c96c194e0bbd0a14cb7b8f94c7'
-            'be9416182beb25f0835bae1dad5a26786f694dbda2e5106f83714be42add653a')
+            'be9416182beb25f0835bae1dad5a26786f694dbda2e5106f83714be42add653a'
+            '612543dcef7fc6e45e1be2f3107d55d6194b20d39b7fd9f128050273eee91f40'
+            '6cfec4a32160df642ffa4b3c1e10ba19e94f1004bac65a349fa273b0f684b8ac'
+            'debec51fb6eb66e9b3d7b76476900fcf94bdc8d703b853402fa15b65c1291725'
+            '771395e3e84a4a1627945112b8c100c898221e04d86b76d4cff946530010e1a4'
+            'a76ec1a929b54d79b1fa643036fcbd9ff2c2cc99e7d7e1573122ca0b5e760347'
+            '26111345b8d9bf87f7336c35aa401ff2f1b2911519e7b725e224c59f33593378'
+            'ba514c06cc03d728d2c1727fac85f2bbe953fe9720dcf8c2fa8de0ae4385e33b'
+            'f5961ae09ddbdda69713d82e631bc3dab4884629f32f60ba201189c2c4269b39'
+            '80d9910ec018c517e4316419939aac9751ddae13b3cadf4712fdac770a899e81'
+            '83904114e89c2b1ed55814bc07ba5a0ad198010b3cac9f223c72ac4fbac3646b')
 
 # Possible replacements are listed in build/linux/unbundle/replace_gn_files.py
 # Keys are the names in the above script; values are the dependencies in Arch
@@ -119,6 +139,16 @@ prepare() {
   patch -Np1 -i ${srcdir}/xxx-ppc64le-sandbox-linux-stat.patch
   patch -Np1 -i ${srcdir}/xxx-ppc64le-support.patch
   patch -Np1 -i ${srcdir}/xxx-ppc64le-swiftshader.patch
+  patch -Np1 -i ${srcdir}/libc_malloc.patch
+  patch -Np1 -i ${srcdir}/cursed^Uscoped_file.patch
+  patch -Np1 -i ${srcdir}/fix-bits-stdint-intn-include.patch
+  patch -Np1 -i ${srcdir}/fix-narrowing-cast.patch
+  patch -Np1 -i ${srcdir}/no-execinfo.patch
+  patch -Np1 -i ${srcdir}/no-getcontext.patch
+  patch -Np1 -i ${srcdir}/sandbox-membarrier.patch
+  patch -Np1 -i ${srcdir}/sandbox-sched_getparam.patch
+  patch -Np1 -i ${srcdir}/webrtc-include.patch
+  patch -Np1 -i ${srcdir}/webrtc-size_t.patch
 
   # Link to system tools required by the build
   mkdir -p third_party/node/linux/node-linux-x64/bin
