--- a/gst-plugins-base/PKGBUILD
+++ b/gst-plugins-base/PKGBUILD
@@ -5,7 +5,7 @@
 pkgbase=gst-plugins-base
 pkgname=(gst-plugins-base-libs gst-plugins-base)
 pkgver=1.18.5
-pkgrel=1
+pkgrel=1.1
 pkgdesc="Multimedia graph framework - base plugins"
 url="https://gstreamer.freedesktop.org/"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -13,7 +13,7 @@ license=(LGPL)
 depends=(gstreamer orc libxv iso-codes libgudev mesa)
 makedepends=(alsa-lib cdparanoia libvisual libvorbis libtheora pango opus
              graphene libpng libjpeg gobject-introspection git meson
-             gtk3 clutter sdl2 glu wayland wayland-protocols)
+             gtk3 qt5-{base,tools,x11extras} clutter sdl2 glu)
 checkdepends=(xorg-server-xvfb)
 options=(!emptydirs)
 _commit=57fb883b3f8c6d7a397afc0dfc4a7c2e5af05579  # tags/1.18.5^0
