* update nftables to 1:1.0.1-3

--- a/nftables/PKGBUILD
+++ b/nftables/PKGBUILD
@@ -3,10 +3,10 @@
 
 pkgname=nftables
 epoch=1
-pkgver=1.0.0
-pkgrel=1
+pkgver=1.0.1
+pkgrel=3
 pkgdesc='Netfilter tables userspace tools'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://netfilter.org/projects/nftables/'
 license=('GPL2')
 depends=('libmnl' 'libnftnl' 'gmp' 'readline' 'ncurses' 'jansson')
@@ -18,7 +18,7 @@ source=("https://netfilter.org/projects/nftables/files/nftables-$pkgver.tar.bz2"
         'nftables.conf'
         'nftables.service')
 install=nftables.install
-sha256sums=('58bf547daf967a2b88ecb4f425f126006ebde22711db806b25c1d6cf84fe45f4'
+sha256sums=('3ceeba625818e81a0be293e9dd486c3ef799ebd92165270f1e57e9a201efa423'
             'SKIP'
             '2aff88019097d21dbfa4713f5b54c184751c86376e458b683f8d90f3abd232a8'
             'deffeef36fe658867dd9203ec13dec85047a6d224ea63334dcf60db97e1809ea')
@@ -43,6 +43,7 @@ build() {
     --sbindir=/usr/bin \
     --sysconfdir=/usr/share \
     --with-json \
+    --with-cli=readline \
     --disable-debug
   make
 }
