* update avahi to 0.8+22+gfd482a7-3.1

--- a/avahi/PKGBUILD
+++ b/avahi/PKGBUILD
@@ -5,13 +5,13 @@
 
 pkgname=avahi
 pkgver=0.8+22+gfd482a7
-pkgrel=3
+pkgrel=3.1
 pkgdesc='Service Discovery for Linux using mDNS/DNS-SD -- compatible with Bonjour'
 url='https://github.com/lathiat/avahi'
 license=(LGPL)
 arch=(x86_64 powerpc64le powerpc riscv64)
 depends=(expat libdaemon glib2 libcap gdbm dbus)
-makedepends=(git gobject-introspection gtk3 qt5-base xmltoman python-dbus
+makedepends=(git gobject-introspection gtk3 qt5-base xmltoman dbus-python
              python-gobject doxygen graphviz libevent)
 optdepends=('gtk3: avahi-discover, avahi-discover-standalone, bshell, bssh, bvnc'
             'qt5-base: qt5 bindings'
