--- a/ghostscript/PKGBUILD
+++ b/ghostscript/PKGBUILD
@@ -4,21 +4,22 @@
 pkgbase=ghostscript
 pkgname=(ghostscript ghostxps ghostpcl)
 pkgver=9.55.0
-pkgrel=2
+pkgrel=3
 pkgdesc="An interpreter for the PostScript language"
 url="https://www.ghostscript.com/"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('AGPL3' 'custom')
 depends=('libxt' 'libcups' 'fontconfig' 'zlib' 'libpng' 'libjpeg' 'jbig2dec'
-         'libtiff' 'lcms2' 'dbus' 'libpaper' 'openjpeg2' 'libidn')
-#makedepends=('gtk3' 'gnutls' 'glu' 'freeglut')
-makedepends=('gnutls')
+         'libtiff' 'lcms2' 'dbus' 'libpaper' 'ijs' 'openjpeg2' 'libidn')
+makedepends=('gtk3' 'gnutls' 'glu' 'freeglut')
 # https://github.com/ArtifexSoftware/ghostpdl-downloads/releases
 source=(https://github.com/ArtifexSoftware/ghostpdl-downloads/releases/download/gs${pkgver//./}/ghostpdl-${pkgver}.tar.xz
         #https://github.com/ArtifexSoftware/ghostpdl-downloads/releases/download/ghostpdl-${pkgver/.0//}/ghostpdl-${pkgver}.tar.xz
-        2010_add_build_timestamp_setting.patch)
+        2010_add_build_timestamp_setting.patch
+        fix-gx_default_copy_alpha.patch::"https://git.ghostscript.com/?p=ghostpdl.git;a=patch;h=d9d8db23e862707795e76ea8f8cdcf7434b2df65")
 sha512sums=('d23864be1548ce7c7ae61398f52c34c5485dfe74e78bf7ef16c8fa5690e2ea857cc9795409a70feda5ff78c27b3c2bbc0e0710d190763fca77137ee9c56a0fed'
-            'cd7794ee4f28b11177021b950196385200b610127ed6cb94a45e3202b690b721a0dfcc0276ff39448d4dab64c1b31a76e6c323696a8315aad9edc22077f18a3d')
+            'cd7794ee4f28b11177021b950196385200b610127ed6cb94a45e3202b690b721a0dfcc0276ff39448d4dab64c1b31a76e6c323696a8315aad9edc22077f18a3d'
+            '94a63b2d33cf1412bfba75d4cab31c5d6f00846b2e608ad82200ff0d55a11bb80d827c12d4edd1f38cef029cae6cdcd5e39cd98791a17bf356119ba8f74fd0a9')
 
 ### update jbig2dec first! ###
 
@@ -61,13 +62,16 @@ prepare() {
 
   # Debian: # allow the build timestamp to be externally set
   patch -Np1 -i ../2010_add_build_timestamp_setting.patch
+
+  # Fix build of asymptote
+  patch -Np1 -i ../fix-gx_default_copy_alpha.patch
 }
 
 build() {
   cd ghostpdl-${pkgver}
   ./configure --prefix=/usr \
               --enable-dynamic \
-              --without-ijs \
+              --with-ijs \
               --with-jbig2dec \
               --with-x \
               --with-drivers=ALL \
