* update gpgme to 1.16.0-3

--- a/gpgme/PKGBUILD
+++ b/gpgme/PKGBUILD
@@ -4,31 +4,34 @@
 # Contributor: Sarah Hay <sarah@archlinux.org>
 
 pkgbase=gpgme
-pkgname=(gpgme python-gpgme)
+pkgname=(gpgme qgpgme python-gpgme)
 pkgver=1.16.0
-pkgrel=1
-_python_ver=3.9
+pkgrel=3
+_python_ver=3.10
 pkgdesc="A C wrapper library for GnuPG"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.gnupg.org/related_software/gpgme/'
 license=('LGPL')
-makedepends=('libgpg-error' 'gnupg' 'python' 'swig')
+makedepends=('libgpg-error' 'gnupg' 'qt5-base' 'python' 'swig')
 validpgpkeys=('6DAA6E64A76D2840571B4902528897B826403ADA') # Werner Koch (dist signing 2020)
 source=("https://www.gnupg.org/ftp/gcrypt/${pkgbase}/${pkgbase}-${pkgver}.tar.bz2"{,.sig}
-        https://github.com/i386x/gpgme/commit/ed9939afc0bc1ef6a0a2dccaae62f19bc30b363d.patch)
+	python310.patch
+        gpgme-1.16.0-glibc-2.34.patch)
 sha256sums=('6c8cc4aedb10d5d4c905894ba1d850544619ee765606ac43df7405865de29ed0'
             'SKIP'
-            'SKIP')
+            '5de2f6bcb6b30642d0cbc3fbd86803c9460d732f44a526f44cedee8bb78d291a'
+            'c14b19ad01531bcbf9a8083809aca6e1550409e31279f214bd95663888b29a14')
 
 prepare() {
-  cd ${pkgname}-${pkgver}
-  patch -Np1 -i ${srcdir}/ed9939afc0bc1ef6a0a2dccaae62f19bc30b363d.patch
+  cd ${pkgbase}-${pkgver}
+  patch -Np1 -i ../python310.patch
+
+  patch -Np1 -i ../gpgme-1.16.0-glibc-2.34.patch
 }
 
 build() {
   cd ${pkgbase}-${pkgver}
 
-  export PYTHONHASHSEED=0
   ./configure \
     --build=${CHOST} \
     --prefix=/usr \
@@ -37,11 +40,12 @@ build() {
     --disable-gpgsm-test
   make
 
-  # ensure reproducibility of .pyc files
   _arch=x86_64
   [ "${CARCH}" = "powerpc" ] && _arch=ppc
   [ "${CARCH}" = "powerpc64le" ] && _arch=ppc64le
   [ "${CARCH}" = "riscv64" ] && _arch=riscv64
+
+  # ensure reproducibility of .pyc files
   touch -d @$SOURCE_DATE_EPOCH lang/python/version.py
   touch -d @$SOURCE_DATE_EPOCH lang/python/python${_python_ver}-gpg/lib.linux-${_arch}-${_python_ver}/gpg/gpgme.py
 
@@ -72,9 +76,9 @@ package_gpgme() {
   make DESTDIR="${pkgdir}" install
 
   # split qgpgme
-  rm -rf "${pkgdir}"/usr/include/{qgpgme,QGpgME}/
-  rm -rf "${pkgdir}"/usr/lib/{cmake/QGpgme/,libqgpgme.*}
-  rm -rf "${pkgdir}"/usr/lib/python*
+  rm -r "${pkgdir}"/usr/include/{qgpgme,QGpgME}/
+  rm -r "${pkgdir}"/usr/lib/{cmake/QGpgme/,libqgpgme.*}
+  rm -r "${pkgdir}"/usr/lib/python*
 }
 
 package_qgpgme() {
