--- a/volume_key/PKGBUILD
+++ b/volume_key/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=volume_key
 pkgver=0.3.12
-pkgrel=5
+pkgrel=7
 pkgdesc="A library for manipulating storage volume encryption keys and storing them separately from volumes to handle forgotten passphrases"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://pagure.io/volume_key"
 license=('GPL')
 depends=('cryptsetup' 'nss' 'gpgme')
