--- a/dosfstools/PKGBUILD
+++ b/dosfstools/PKGBUILD
@@ -6,7 +6,8 @@ pkgname=dosfstools
 pkgver=4.2
 pkgrel=1
 pkgdesc="DOS filesystem utilities"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(riscv64)
 depends=('glibc')
 source=(https://github.com/$pkgname/$pkgname/releases/download/v$pkgver/$pkgname-$pkgver.tar.gz{,.sig}
 )
