--- a/gptfdisk/PKGBUILD
+++ b/gptfdisk/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=gptfdisk
 pkgver=1.0.8
 pkgrel=1
 pkgdesc="A text-mode partitioning tool that works on GUID Partition Table (GPT) disks"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.rodsbooks.com/gdisk/"
 license=('GPL2')
 depends=('gcc-libs' 'popt' 'libuuid.so' 'libncursesw.so')
