--- a/libbytesize/PKGBUILD
+++ b/libbytesize/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=libbytesize
 pkgver=2.6
-pkgrel=1
+pkgrel=3
 pkgdesc='A tiny library providing a C "class" for working with arbitrary big sizes in bytes'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/rhinstaller/libbytesize"
 license=('LGPL')
 depends=('mpfr' 'pcre2')
