* update ndctl to 72.1-1

--- a/ndctl/PKGBUILD
+++ b/ndctl/PKGBUILD
@@ -2,25 +2,27 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=ndctl
-pkgver=71.1
+pkgver=72.1
 pkgrel=1
 pkgdesc='Utility library for managing the libnvdimm (non-volatile memory device) sub-system in the Linux kernel'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le riscv64)
 url="https://github.com/pmem/ndctl"
 license=('LGPL')
-depends=('json-c' 'keyutils' 'kmod' 'systemd-libs' 'util-linux-libs')
+depends=('iniparser' 'json-c' 'keyutils' 'kmod' 'systemd-libs' 'util-linux-libs')
 makedepends=('asciidoctor' 'bash-completion' 'systemd' 'xmlto')
-source=("$pkgname-$pkgver.tar.gz::https://github.com/pmem/ndctl/archive/v$pkgver.tar.gz")
-sha512sums=('92fb06ca64455775ce0b89ba0846f70235e02fe3502e2a8a55a858f76f87cb90ae98f5bf01620e5884f667ea78ee2bee2cd9e7a85ffa8f8d9c456e9282ca9ebc')
+source=("https://github.com/pmem/ndctl/archive/v$pkgver/$pkgname-$pkgver.tar.gz")
+sha512sums=('7304e23121c99457fa6e22a399fb636f6a66d6d07b090463ec41e424687b06e7e8a1a18623ab9dd5783aaccfa09ff964e3477b63aaa4614ac60f6e6050452f12')
 
 prepare() {
   # fix location of modprobe.d conf
   sed -i 's|^modprobedir =.*|modprobedir = /usr/lib/modprobe.d/|' $pkgname-$pkgver/Makefile.am
+
+  cd "$srcdir"/$pkgname-$pkgver
+  ./autogen.sh
 }
 
 build() {
   cd "$srcdir"/$pkgname-$pkgver
-  ./autogen.sh
   ./configure --prefix=/usr --sysconfdir=/etc
   make
 }
