* update xapian-core to 1:1.4.18-1.1

--- a/xapian-core/PKGBUILD
+++ b/xapian-core/PKGBUILD
@@ -8,10 +8,10 @@
 
 pkgname=xapian-core
 pkgver=1.4.18
-pkgrel=1
+pkgrel=1.1
 epoch=1
 pkgdesc='Open source search engine library.'
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.xapian.org/"
 license=('GPL2')
 makedepends=('util-linux')
