--- a/kde/telepathy-glib/PKGBUILD
+++ b/kde/telepathy-glib/PKGBUILD
@@ -8,7 +8,7 @@ pkgname=telepathy-glib
 pkgver=0.24.2
 pkgrel=2
 pkgdesc="GLib bindings for the Telepathy D-Bus protocol"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://telepathy.freedesktop.org"
 license=(LGPL2.1)
 depends=(dbus-glib)
