--- a/zeitgeist/PKGBUILD
+++ b/zeitgeist/PKGBUILD
@@ -4,10 +4,10 @@
 # Contributor: György Balló <ballogy@freestart.hu>
 
 pkgname=zeitgeist
-pkgver=1.0.3
-pkgrel=3
+pkgver=1.0.4
+pkgrel=1
 pkgdesc="Service logging user activities and events"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://launchpad.net/zeitgeist/"
 license=(GPL2 LGPL2.1)
 depends=(json-glib telepathy-glib gtk3 xapian-core sqlite)
@@ -15,8 +15,8 @@ makedepends=(gobject-introspection vala raptor python-rdflib git)
 provides=(zeitgeist-datahub)
 conflicts=(zeitgeist-datahub)
 replaces=(zeitgeist-datahub)
-_commit=c9c41bc881ffba1f993e9391c853b1a772d5052b
-source=("git+https://anongit.freedesktop.org/git/zeitgeist/zeitgeist#commit=$_commit")
+_commit=8b89364c077b46734d193c5b8a80f83b0fc917dd
+source=("git+https://gitlab.freedesktop.org/zeitgeist/zeitgeist#commit=$_commit")
 sha256sums=('SKIP')
 validpgpkeys=('E4884AEEDE4CC02043C3D8045DECDBA89270E723') #Rico Tzschichholz <ricotz@ubuntu.com>
 
