--- a/opusfile/PKGBUILD
+++ b/opusfile/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=opusfile
 pkgver=0.12
 pkgrel=1
 pkgdesc='Library for opening, seeking, and decoding .opus files'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://opus-codec.org/'
 license=(BSD)
 depends=(libogg openssl opus)
