* update sdl2_mixer to 2.0.4-7

--- a/sdl2_mixer/PKGBUILD
+++ b/sdl2_mixer/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=sdl2_mixer
 pkgver=2.0.4
 pkgrel=7
 pkgdesc="A simple multi-channel audio mixer (Version 2)"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="http://www.libsdl.org/projects/SDL_mixer"
 license=('MIT')
 depends=('sdl2' 'libvorbis' 'libmodplug' 'mpg123' 'flac' 'opusfile')
