* update libaccounts-glib to 1.25-5

--- a/libaccounts-glib/PKGBUILD
+++ b/libaccounts-glib/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=libaccounts-glib
 pkgver=1.25
-pkgrel=4
+pkgrel=5
 pkgdesc='Glib-based client library for accessing the online accounts database'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://gitlab.com/accounts-sso/libaccounts-glib'
 license=(LGPL)
 depends=(dbus-glib libxml2 sqlite)
@@ -17,7 +17,6 @@ sha256sums=('47d4b2a5cf4f17f52550aa65b34030fbd1a242e1a233f248a5871620e0ff4c11')
 
 build() {
   meson $pkgname-VERSION_$pkgver build \
-    -Dtests=false \
     -Dprefix=/usr
   meson compile -C build
 }
