* update ibus to 1.5.25-5

--- a/ibus/PKGBUILD
+++ b/ibus/PKGBUILD
@@ -4,9 +4,9 @@
 pkgbase=ibus
 pkgname=(ibus libibus)
 pkgver=1.5.25
-pkgrel=3
+pkgrel=5
 pkgdesc="Next Generation Input Bus for Linux"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/ibus/ibus/wiki"
 license=('LGPL')
 depends=('dconf' 'gtk3' 'hicolor-icon-theme' 'libnotify' 'dbus-python' 'python-gobject'
