--- a/libnewt/PKGBUILD
+++ b/libnewt/PKGBUILD
@@ -6,10 +6,10 @@
 
 pkgname=libnewt
 pkgver=0.52.21
-pkgrel=6
+pkgrel=8
 _tclver=8.6
 pkgdesc="Not Erik's Windowing Toolkit - text mode windowing with slang"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://pagure.io/newt'
 license=(GPL)
 depends=(gpm libxcrypt popt slang)
