* update usbmuxd to 1.1.1-1.1

--- a/usbmuxd/PKGBUILD
+++ b/usbmuxd/PKGBUILD
@@ -4,10 +4,10 @@
 
 pkgname=usbmuxd
 pkgver=1.1.1
-pkgrel=1
+pkgrel=1.1
 pkgdesc="USB Multiplex Daemon"
 url="https://marcansoft.com/blog/iphonelinux/usbmuxd/"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL2' 'GPL3')
 depends=('libimobiledevice')
 makedepends=('git' 'systemd')
