* update linux to 5.16.5.arch1-1

--- a/linux/PKGBUILD
+++ b/linux/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jan Alexander Steffens (heftig) <jan.steffens@gmail.com>
 
 pkgbase=linux
-pkgver=5.16.2.arch1
+pkgver=5.16.5.arch1
 pkgrel=1
 pkgdesc='Linux'
 _srctag=v${pkgver%.*}-${pkgver##*.}
@@ -28,8 +28,8 @@ validpgpkeys=(
   'C7E7849466FE2358343588377258734B41C31549'  # David Runge <dvzrv@archlinux.org>
 )
 sha256sums=('SKIP'
-            '6c1475ab82256956a053059d5935c9b481eaabc496e13adebf710755aea06bdc'
-            '7d1bb71b601bbddd2a107fe1d5f79caadf3f728d8001855dd78bab0bba14453f')
+            '5ce14bca4530e096c93450d7fe76bcff36c5add788f6e0ec8bcdb4119f9c83ab'
+            'eb9093e8130737300390b53e1c8b5cbe6991dc6a579f2de03b02d43f2180cb7e')
 
 export KBUILD_BUILD_HOST=archpower
 export KBUILD_BUILD_USER=$pkgbase
@@ -196,7 +196,7 @@ _package-docs() {
   ln -sr "$builddir/Documentation" "$pkgdir/usr/share/doc/$pkgbase"
 }
 
-pkgname=("$pkgbase" "$pkgbase-headers") # "$pkgbase-docs")
+pkgname=("$pkgbase" "$pkgbase-headers" "$pkgbase-docs")
 for _p in "${pkgname[@]}"; do
   eval "package_$_p() {
     $(declare -f "_package${_p#$pkgbase}")
