* update ristretto to 0.12.2-1

--- a/xfce4/ristretto/PKGBUILD
+++ b/xfce4/ristretto/PKGBUILD
@@ -6,7 +6,7 @@
 # Contributor: Ronald van Haren <ronald.archlinux.org>
 
 pkgname=ristretto
-pkgver=0.11.0
+pkgver=0.12.2
 pkgrel=1
 pkgdesc="A fast and lightweight picture viewer for Xfce"
 arch=(x86_64 powerpc64le powerpc)
@@ -14,9 +14,9 @@ url="https://docs.xfce.org/apps/ristretto/start"
 license=('GPL')
 groups=('xfce4-goodies')
 depends=('libxfce4ui' 'xfconf' 'tumbler' 'libexif' 'file')
-makedepends=('intltool')
+makedepends=('intltool' 'python')
 source=("https://archive.xfce.org/src/apps/$pkgname/${pkgver%.*}/$pkgname-$pkgver.tar.bz2")
-sha256sums=('877e30d412c8cbfa9706f4ac0cab1a478f5829beafb773addc7722ca0cb78823')
+sha256sums=('0eee869922ec00a253dafa446c2aad2a2f98e07e1db7262e8337ce9ec2dad969')
 
 build() {
   cd "$pkgname-$pkgver"
