* update opencolorio to 2.1.1-2

--- a/opencolorio/PKGBUILD
+++ b/opencolorio/PKGBUILD
@@ -1,10 +1,10 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Sven-Hendrik Haase <svenstaro@gmail.com>
+# Maintainer: Sven-Hendrik Haase <svenstaro@archlinux.org>
 # Contributor: Dumitru Ursu <dima@ceata.org>
 
 pkgname=opencolorio
-pkgver=2.0.1
-pkgrel=3
+pkgver=2.1.1
+pkgrel=2
 pkgdesc="A color management framework for visual effects and animation"
 arch=(x86_64 powerpc64le)
 url="https://opencolorio.org"
@@ -12,18 +12,13 @@ license=('BSD')
 depends=('freeglut' 'glew' 'lcms2' 'tinyxml' 'yaml-cpp' 'imath' 'pystring')
 makedepends=('cmake' 'python' 'pybind11' 'ninja')
 optdepends=('python: python bindings')
-source=($pkgname-$pkgver.tar.gz::https://github.com/AcademySoftwareFoundation/OpenColorIO/archive/v$pkgver.tar.gz
-        opencolorio-openexr3.patch)
-sha512sums=('5787cc4cadb0a1832c925712ca0dfef6e843082b9461460e1798326c6fceaa97bee78e5298651e6a8a3662b348eab5ab9791e94c3efcac337da07229fb559338'
-            '269a86e4020d272b64af631ba01f9b1e644bde119e9bfb1d5ec3fd62579d5d3f7ab31295fb6cffc51d7349c469e2ca6e12f69310317266eda602541e9fcff94f')
-
-prepare() {
-  patch -d OpenColorIO-$pkgver -p1 < opencolorio-openexr3.patch
-}
+source=($pkgname-$pkgver.tar.gz::https://github.com/AcademySoftwareFoundation/OpenColorIO/archive/v$pkgver.tar.gz)
+sha512sums=('86585ec860d460b158f24efb82f202deced7ce96a6bfefd42f39cad9c112add68cca6935f383f5d718c07fe1c121d8ed8b0d2069321f1dafb8ce68b49bc75194')
 
 build() {
   cd OpenColorIO-$pkgver
 
+  CXXFLAGS+=" -ffat-lto-objects"
   cmake \
     -GNinja \
     -Bbuild \
