* update KF5 to 5.90.0

--- a/kde/kcoreaddons/PKGBUILD
+++ b/kde/kcoreaddons/PKGBUILD
@@ -4,18 +4,17 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kcoreaddons
-pkgver=5.87.0
+pkgver=5.90.0
 pkgrel=1
 pkgdesc='Addons to QtCore'
 arch=(x86_64 powerpc64le powerpc)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-base)
-makedepends=(extra-cmake-modules qt5-tools qt5-doc clang python-pyqt5 doxygen sip4)
-optdepends=('python-pyqt5: for the Python bindings')
+makedepends=(extra-cmake-modules qt5-tools qt5-doc clang doxygen)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('d29fe93b58fec0edb3387d5bf5290366e64a5975df44c1b062cc4e29cfbfeda6'
+sha256sums=('6e168f1d719e4c388de324960d14b99963d42c74a21986f027c9b7093281a40a'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 
