--- a/kde/extra-cmake-modules/PKGBUILD
+++ b/kde/extra-cmake-modules/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=extra-cmake-modules
-pkgver=5.87.0
+pkgver=5.90.0
 pkgrel=1
 pkgdesc='Extra modules and scripts for CMake'
 arch=(any)
@@ -16,16 +16,10 @@ optdepends=('python-pyxdg: to generate fastlane metadata for Android apps'
             'python-requests: to generate fastlane metadata for Android apps'
             'python-yaml: to generate fastlane metadata for Android apps')
 groups=(kf5)
-source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig}
-        ECM-no-init.py.patch)
-sha256sums=('541ca70d8e270614d19d8fd9e55f97b55fa1dc78d6538c6f6757be372ef8bcab'
-            'SKIP'
-            '5695e45c7621a00c0bca28f058c13b5d524f963a00b53337c8cefcdaf22c4b52')
+source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
+sha256sums=('f3007c3ceca56249292cf340a38518589a55a4afcf27e166ab63c5ac8ffabcb0'
+            'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
-
-prepare() {
-  patch -d $pkgname-$pkgver -p1 < ECM-no-init.py.patch # Don't create __init__.py
-}
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
