--- a/kde/frameworkintegration/PKGBUILD
+++ b/kde/frameworkintegration/PKGBUILD
@@ -4,8 +4,8 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=frameworkintegration
-pkgver=5.87.0
-pkgrel=1
+pkgver=5.90.0
+pkgrel=2
 pkgdesc='Framework providing components to allow applications to integrate with a KDE Workspace'
 arch=(x86_64 powerpc64le powerpc)
 url='https://community.kde.org/Frameworks'
@@ -14,10 +14,16 @@ depends=(knewstuff)
 makedepends=(extra-cmake-modules appstream-qt packagekit-qt5)
 optdepends=('appstream-qt: dependency resolving via AppStream' 'packagekit-qt5: dependency resolving via AppStream')
 groups=(kf5)
-source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('8b0290d739b0d27f07a0aaa1c267a2b37614aa9847fec7c4cc4b21e11fee6fad'
-            'SKIP')
+source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig}
+        https://invent.kde.org/frameworks/frameworkintegration/-/commit/675802e7.patch)
+sha256sums=('5651afb5bb3563d2212662974bd91750b313e3b58fabf59f59459ef904a6fbec'
+            'SKIP'
+            '047ea79fdfd0866dc4565b277e6c1e6bb9e88e99774482663de57e72100e72ea')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
+
+prepare() {
+  patch -d $pkgname-$pkgver -p1 < 675802e7.patch # Fix KNS downloads
+}
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
