--- a/kde/kauth/PKGBUILD
+++ b/kde/kauth/PKGBUILD
@@ -4,18 +4,17 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kauth
-pkgver=5.87.0
+pkgver=5.90.0
 pkgrel=1
 pkgdesc='Abstraction to system policy and authentication features'
 arch=(x86_64 powerpc64le powerpc)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kcoreaddons polkit-qt5)
-makedepends=(extra-cmake-modules qt5-tools qt5-doc clang python-pyqt5 doxygen sip4)
-optdepends=('python-pyqt5: for the Python bindings')
+makedepends=(extra-cmake-modules qt5-tools qt5-doc clang doxygen)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('f1d1c00af4d6ac139b34073bb5c308de9f5f81d5bb75a3a3ffc05ab10f2278bd'
+sha256sums=('23a45f68062432b65f4264f371e7f1753034dba3a86d5e44bf9fb1abf30d91bc'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 
