--- a/kde/kcodecs/PKGBUILD
+++ b/kde/kcodecs/PKGBUILD
@@ -4,18 +4,17 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kcodecs
-pkgver=5.87.0
+pkgver=5.90.0
 pkgrel=1
 pkgdesc='Provide a collection of methods to manipulate strings using various encodings'
 arch=(x86_64 powerpc64le powerpc)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-base)
-makedepends=(extra-cmake-modules qt5-tools qt5-doc clang python-pyqt5 gperf doxygen sip4)
-optdepends=('python-pyqt5: for the Python bindings')
+makedepends=(extra-cmake-modules qt5-tools qt5-doc clang gperf doxygen)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('0752156e85320731776f727ff171b2308e0f0c511efc4f2158dd763ed75368b9'
+sha256sums=('d0c604564745a1a50b01d61aa52282cad08dfdb37aecca30d5f80ea325f4984f'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 
