--- a/kde/kconfig/PKGBUILD
+++ b/kde/kconfig/PKGBUILD
@@ -4,18 +4,18 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kconfig
-pkgver=5.87.0
+pkgver=5.90.0
 pkgrel=1
 pkgdesc='Configuration system'
 arch=(x86_64 powerpc64le powerpc)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-base)
-makedepends=(extra-cmake-modules qt5-tools qt5-doc clang python-pyqt5 doxygen sip4)
-optdepends=('python-pyqt5: for the Python bindings')
+makedepends=(extra-cmake-modules qt5-declarative qt5-tools qt5-doc clang doxygen)
+optdepends=('qt5-declarative: QML bindings')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('345bf5a68de968c3301aec16e1ec6eebd1c575a891464784aa0e177771e917d1'
+sha256sums=('369bf21d3d7a894575728b0061875e4122de13935c0740733e0bc2df9b1f1a7b'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 
