--- a/kde/kconfigwidgets/PKGBUILD
+++ b/kde/kconfigwidgets/PKGBUILD
@@ -4,18 +4,18 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kconfigwidgets
-pkgver=5.87.0
+pkgver=5.90.1
 pkgrel=1
 pkgdesc='Widgets for KConfig'
 arch=(x86_64 powerpc64le powerpc)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kauth kcodecs kconfig kguiaddons ki18n kwidgetsaddons)
-makedepends=(extra-cmake-modules kdoctools clang python-pyqt5 doxygen qt5-tools qt5-doc sip4)
-optdepends=('python-pyqt5: for the Python bindings' 'perl: for preparetips5')
+makedepends=(extra-cmake-modules kdoctools clang doxygen qt5-tools qt5-doc)
+optdepends=('perl: for preparetips5')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('04b5e518e25ba967d15d705a6170d16ccc34d918c9135f1117551d7429b6a3a2'
+sha256sums=('ba7f9169237b9146ce3e06b9f4a895d0ad5b822e3bb7f68448c453a5892571ae'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 
