--- a/kde/kdbusaddons/PKGBUILD
+++ b/kde/kdbusaddons/PKGBUILD
@@ -4,18 +4,17 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kdbusaddons
-pkgver=5.87.0
+pkgver=5.90.0
 pkgrel=1
 pkgdesc='Addons to QtDBus'
 arch=(x86_64 powerpc64le powerpc)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-x11extras)
-makedepends=(extra-cmake-modules qt5-tools qt5-doc clang python-pyqt5 doxygen sip4)
-optdepends=('python-pyqt5: for the Python bindings')
+makedepends=(extra-cmake-modules qt5-tools qt5-doc clang doxygen)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('d75ca847fef7f324f97e7b3cdb45f7fa3cc2c36bd44ca35062589534d5ceb593'
+sha256sums=('44e99c247c053db796ac3752f546bcc759651206f178305854bc4757fd4ac03c'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 
