--- a/kde/kguiaddons/PKGBUILD
+++ b/kde/kguiaddons/PKGBUILD
@@ -4,18 +4,17 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kguiaddons
-pkgver=5.87.0
+pkgver=5.90.0
 pkgrel=1
 pkgdesc='Addons to QtGui'
 arch=(x86_64 powerpc64le powerpc)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-x11extras qt5-wayland)
-makedepends=(extra-cmake-modules clang python-pyqt5 doxygen qt5-tools qt5-doc sip4)
-optdepends=('python-pyqt5: for the Python bindings')
+makedepends=(extra-cmake-modules clang doxygen qt5-tools qt5-doc)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('90067fd81f6f25b0c5a1284c993fd04ea7212e33cf678744076935e484e808cd'
+sha256sums=('9d2be477affaac6908e946b0c073d13f072a3254e8f2fe5d12d2f7c37c473455'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 
