--- a/kde/kitemmodels/PKGBUILD
+++ b/kde/kitemmodels/PKGBUILD
@@ -4,18 +4,18 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kitemmodels
-pkgver=5.87.0
+pkgver=5.90.0
 pkgrel=1
 pkgdesc='Models for Qt Model/View system'
 arch=(x86_64 powerpc64le powerpc)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-base)
-makedepends=(extra-cmake-modules python-pyqt5 clang doxygen qt5-tools qt5-doc sip4 qt5-declarative)
-optdepends=('python-pyqt5: for the Python bindings' 'qt5-declarative: QML bindings')
+makedepends=(extra-cmake-modules clang doxygen qt5-tools qt5-doc qt5-declarative)
+optdepends=('qt5-declarative: QML bindings')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('22f139281ba32a15d3721168dc08e496d80f9894182967ac455873bbdc45a7e3'
+sha256sums=('f12ffc52148cc94715b038b5c6e210669192a877f4678ff8e56bea795ca4ff38'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 
