--- a/kde/kitemviews/PKGBUILD
+++ b/kde/kitemviews/PKGBUILD
@@ -4,18 +4,17 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kitemviews
-pkgver=5.87.0
+pkgver=5.90.0
 pkgrel=1
 pkgdesc='Widget addons for Qt Model/View'
 arch=(x86_64 powerpc64le powerpc)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-base)
-makedepends=(extra-cmake-modules qt5-tools qt5-doc clang python-pyqt5 doxygen sip4)
-optdepends=('python-pyqt5: for the Python bindings')
+makedepends=(extra-cmake-modules qt5-tools qt5-doc clang doxygen)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('6f51463ae83f40df23d86037c5cda11caa862651178d796ca02e0de6ad482fdb'
+sha256sums=('f757982856c62031313d724bc639319b9fc60b647b91aa8667b22bd577414283'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 
