--- a/kde/kjobwidgets/PKGBUILD
+++ b/kde/kjobwidgets/PKGBUILD
@@ -4,18 +4,17 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kjobwidgets
-pkgver=5.87.0
+pkgver=5.90.0
 pkgrel=1
 pkgdesc='Widgets for tracking KJob instances'
 arch=(x86_64 powerpc64le powerpc)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kcoreaddons kwidgetsaddons qt5-x11extras)
-makedepends=(extra-cmake-modules qt5-tools qt5-doc clang python-pyqt5 doxygen sip4)
-optdepends=('python-pyqt5: for the Python bindings')
+makedepends=(extra-cmake-modules qt5-tools qt5-doc clang doxygen)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('e56b845f6b609255420f6558d58b844dff68a35d67b67d78b98919f67c230f68'
+sha256sums=('0d65d194284d2d8097d16c7d031772d29886316985e3274db3b06b5a916163cb'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 
