--- a/kde/knotifications/PKGBUILD
+++ b/kde/knotifications/PKGBUILD
@@ -4,17 +4,18 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=knotifications
-pkgver=5.87.0
+pkgver=5.90.0
 pkgrel=1
 pkgdesc='Abstraction for system notifications'
 arch=(x86_64 powerpc64le powerpc)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(libcanberra libdbusmenu-qt5 kwindowsystem kconfig kcoreaddons qt5-speech libxtst)
-makedepends=(extra-cmake-modules qt5-tools qt5-doc doxygen)
+makedepends=(extra-cmake-modules qt5-tools qt5-doc doxygen qt5-declarative)
+optdepends=('qt5-declarative: QML bindings')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('830583877f13dfd8c7fc512151ab23b7a34fa0a8229e144b1bff5b1a2253f90f'
+sha256sums=('f19d4a2a928da505d3d99cf66967017a8eb9488bbc356e6e23e8075fa01c0b97'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 
