--- a/kde/ktexteditor/PKGBUILD
+++ b/kde/ktexteditor/PKGBUILD
@@ -4,17 +4,18 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=ktexteditor
-pkgver=5.87.0
+pkgver=5.90.0
 pkgrel=1
 pkgdesc='Advanced embeddable text editor'
 arch=(x86_64 powerpc64le powerpc)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
-depends=(kparts syntax-highlighting libgit2 editorconfig-core-c)
+depends=(kparts syntax-highlighting editorconfig-core-c)
 makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc)
+optdepends=('git: git integration')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('2f1f552f57c33dc213320d61c8b5e8470aa75e08aaf80c563773dcfd85e3b68d'
+sha256sums=('56088115827ae406dcd383e3c3fdf408950f351887259e41965fe4b7929f2dbc'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 
