--- a/kde/kwidgetsaddons/PKGBUILD
+++ b/kde/kwidgetsaddons/PKGBUILD
@@ -4,18 +4,17 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kwidgetsaddons
-pkgver=5.87.0
+pkgver=5.90.0
 pkgrel=1
 pkgdesc='Addons to QtWidgets'
 arch=(x86_64 powerpc64le powerpc)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-base)
-makedepends=(extra-cmake-modules qt5-tools qt5-doc clang python-pyqt5 doxygen sip4)
-optdepends=('python-pyqt5: for the Python bindings')
+makedepends=(extra-cmake-modules qt5-tools qt5-doc clang doxygen)
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('2b119b3f886131009d24e139a313fb27c2ed3f681534d9297ade40153b4dfb01'
+sha256sums=('ca4cbbecc86fdaa00a09ad700037c47fe9c22e584d8c79f6b9007181018e27b0'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 
