--- a/kde/prison/PKGBUILD
+++ b/kde/prison/PKGBUILD
@@ -4,18 +4,18 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=prison
-pkgver=5.87.0
+pkgver=5.90.0
 pkgrel=1
 pkgdesc='A barcode API to produce QRCode barcodes and DataMatrix barcodes'
 arch=(x86_64 powerpc64le powerpc)
 url='https://community.kde.org/Frameworks'
 license=(GPL)
-depends=(qt5-base libdmtx qrencode)
+depends=(qt5-base libdmtx qrencode zxing-cpp)
 makedepends=(extra-cmake-modules doxygen qt5-tools qt5-doc qt5-declarative)
 optdepends=('qt5-declarative: QML bindings')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('07694637a1463882b4108fa6c8283324b35ffe471c27cfaa25fb0cf589b7686d'
+sha256sums=('d36fa8550af7265e56af3ab9d10465f73aeae0ce18b5877351db20293d14537c'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 
