--- a/kde/purpose/PKGBUILD
+++ b/kde/purpose/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer:Antonio Rojas <arojas@archlinux.org>
 
 pkgname=purpose
-pkgver=5.87.0
+pkgver=5.90.0
 pkgrel=1
 pkgdesc='Framework for providing abstractions to get the developers purposes fulfilled'
 arch=(x86_64 powerpc64le powerpc)
@@ -10,11 +10,13 @@ url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(kaccounts-integration kirigami2 accounts-qml-module)
 makedepends=(extra-cmake-modules intltool)
-optdepends=('kdeconnect: sharing to smartphone via KDE Connect' 'telegram-desktop: sharing via Telegram'
-            'bluedevil: sharing via Bluetooth')
+optdepends=('kdeconnect: sharing to smartphone via KDE Connect'
+            'telegram-desktop: sharing via Telegram'
+            'bluedevil: sharing via Bluetooth'
+            'prison: QR code plugin')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('4dc3c6984216fbfd00f4754832e75cc51a90f426ce7d39611137f451a1a8b735'
+sha256sums=('810ae4e77d0206649a3f56cf69e6c76b867a7c774d3dc7cf0cbed521a14941a0'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 
