--- a/kde/qqc2-desktop-style/PKGBUILD
+++ b/kde/qqc2-desktop-style/PKGBUILD
@@ -2,17 +2,17 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=qqc2-desktop-style
-pkgver=5.87.0
+pkgver=5.90.0
 pkgrel=1
 pkgdesc='A style for Qt Quick Controls 2 to make it follow your desktop theme'
 arch=(x86_64 powerpc64le powerpc)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 groups=(kf5)
-depends=(kirigami2 kiconthemes)
+depends=(kirigami2 kiconthemes sonnet)
 makedepends=(extra-cmake-modules)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('07ab65d080f7f3a6d9076d90b72e9dfb3f3a6caa4e01472a1d261ef7cacb240a'
+sha256sums=('1921b1c56556c6ff6c53ef081199d5306bb9488f5457247eacd646d09bcfe115'
             'SKIP')
 validpgpkeys=('53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB') # David Faure <faure@kde.org>
 
