--- a/kde/sonnet/PKGBUILD
+++ b/kde/sonnet/PKGBUILD
@@ -4,19 +4,20 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=sonnet
-pkgver=5.87.0
+pkgver=5.90.0
 pkgrel=1
 pkgdesc='Spelling framework for Qt5'
 arch=(x86_64 powerpc64le powerpc)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-base)
-makedepends=(extra-cmake-modules qt5-tools qt5-doc hunspell aspell hspell libvoikko doxygen)
+makedepends=(extra-cmake-modules qt5-declarative qt5-tools qt5-doc hunspell aspell hspell libvoikko doxygen)
 optdepends=('hunspell: spell checking via hunspell' 'aspell: spell checking via aspell' 
-            'hspell: spell checking for Hebrew' 'libvoikko: Finnish support via Voikko')
+            'hspell: spell checking for Hebrew' 'libvoikko: Finnish support via Voikko'
+            'qt5-declarative: QML bindings')
 groups=(kf5)
 source=(https://download.kde.org/stable/frameworks/${pkgver%.*}/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('1ad6fe55c06eeed600511be34a374aa46e1cb1e5fea8007255468fa1679289b1'
+sha256sums=('c7a772aec93c00fcd714b93b0596d2e918cb60f4e0937d7d152c07be53ed9d34'
             'SKIP')
 validpgpkeys=(53E6B47B45CEA3E0D5B7457758D0EE648A48B3BB) # David Faure <faure@kde.org>
 
