* update minio-client to 2021.12.10-1

--- a/go/minio-client/PKGBUILD
+++ b/go/minio-client/PKGBUILD
@@ -1,10 +1,10 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Sven-Hendrik Haase <svenstaro@gmail.com>
+# Maintainer: Sven-Hendrik Haase <svenstaro@archlinux.org>
 # Contributor: Dhananjay Balan <mail@dbalan.in>
 
 pkgname=minio-client
-pkgver=2021.09.23
-_timever=T05:44:03Z
+pkgver=2021.12.10
+_timever=T00:14:28Z
 _pkgver="${pkgver//./-}${_timever//:/-}"
 pkgrel=1
 pkgdesc='Replacement for ls, cp, mkdir, diff and rsync commands for filesystems and object storage'
