* update libldac to 2.0.2.3-1.1

--- a/libldac/PKGBUILD
+++ b/libldac/PKGBUILD
@@ -3,10 +3,10 @@
 
 pkgname=libldac
 pkgver=2.0.2.3
-pkgrel=1
+pkgrel=1.1
 pkgdesc="LDAC Bluetooth encoder library"
 url="https://github.com/EHfive/ldacBT"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le riscv64)
 license=(Apache)
 depends=(glibc)
 makedepends=(git cmake)
