* update maeparser to 1.2.4-5

--- a/maeparser/PKGBUILD
+++ b/maeparser/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=maeparser
 pkgver=1.2.4
-pkgrel=4
+pkgrel=5
 pkgdesc="Maestro file parser"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/schrodinger/maeparser"
 license=(MIT)
 depends=(boost-libs)
