* update coordgen to 3.0.0-1

--- a/coordgen/PKGBUILD
+++ b/coordgen/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=coordgen
 pkgver=3.0.0
 pkgrel=1
 pkgdesc='Schrodinger-developed 2D Coordinate Generation'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://github.com/schrodinger/coordgenlibs'
 license=(BSD)
 depends=(maeparser)
