* update linux to 5.16.7.arch1-1

--- a/linux/PKGBUILD
+++ b/linux/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jan Alexander Steffens (heftig) <jan.steffens@gmail.com>
 
 pkgbase=linux
-pkgver=5.16.5.arch1
+pkgver=5.16.7.arch1
 pkgrel=1
 pkgdesc='Linux'
 _srctag=v${pkgver%.*}-${pkgver##*.}
@@ -29,7 +29,7 @@ validpgpkeys=(
 )
 sha256sums=('SKIP'
             '5ce14bca4530e096c93450d7fe76bcff36c5add788f6e0ec8bcdb4119f9c83ab'
-            'eb9093e8130737300390b53e1c8b5cbe6991dc6a579f2de03b02d43f2180cb7e')
+            'SKIP')
 
 export KBUILD_BUILD_HOST=archpower
 export KBUILD_BUILD_USER=$pkgbase
@@ -68,7 +68,7 @@ prepare() {
 build() {
   cd $_srcname
   make all
-  make htmldocs
+  #make htmldocs
 }
 
 _package() {
@@ -196,7 +196,7 @@ _package-docs() {
   ln -sr "$builddir/Documentation" "$pkgdir/usr/share/doc/$pkgbase"
 }
 
-pkgname=("$pkgbase" "$pkgbase-headers" "$pkgbase-docs")
+pkgname=("$pkgbase" "$pkgbase-headers") # "$pkgbase-docs")
 for _p in "${pkgname[@]}"; do
   eval "package_$_p() {
     $(declare -f "_package${_p#$pkgbase}")
