* update suitesparse to 5.10.1-2

--- a/suitesparse/PKGBUILD
+++ b/suitesparse/PKGBUILD
@@ -1,27 +1,25 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Ronald van Haren <ronald.archlinux.org>
+# Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=suitesparse
 pkgver=5.10.1
-pkgrel=1.1
-pkgdesc="A collection of sparse matrix libraries"
-url="http://faculty.cse.tamu.edu/davis/suitesparse.html"
+pkgrel=2
+pkgdesc='A collection of sparse matrix libraries'
+url='http://faculty.cse.tamu.edu/davis/suitesparse.html'
 arch=(x86_64 powerpc64le powerpc riscv64)
-conflicts=('umfpack')
-provides=('umfpack')
-replaces=('umfpack')
-depends=('metis' 'lapack' 'mpfr')
-makedepends=('gcc-fortran' 'cmake' 'chrpath')
-license=('GPL')
-options=('staticlibs')
-source=($pkgname-$pkgver.tar.gz::"https://github.com/DrTimothyAldenDavis/SuiteSparse/archive/v$pkgver.tar.gz"
+depends=(metis lapack mpfr)
+makedepends=(gcc-fortran cmake chrpath)
+license=(GPL)
+options=(staticlibs)
+source=(https://github.com/DrTimothyAldenDavis/SuiteSparse/archive/v$pkgver/$pkgname-$pkgver.tar.gz
         suitesparse-no-demo.patch)
 sha256sums=('acb4d1045f48a237e70294b950153e48dce5b5f9ca8190e86c2b8c54ce00a7ee'
             '409b32e546ec4936d0d88e39c59ee68dfd9f630d8c454ce1e3d58243df7ad396')
 
 prepare() {
   cd SuiteSparse-$pkgver
-  patch -p1 -i ${srcdir}/suitesparse-no-demo.patch # Don't run demo
+  patch -p1 -i ../suitesparse-no-demo.patch # Don't run demo
 }
 
 build() {
