* update bctoolbox to 5.0.66-1

--- a/bctoolbox/PKGBUILD
+++ b/bctoolbox/PKGBUILD
@@ -3,16 +3,16 @@
 # Contributor: Sergej Pupykin <arch+pub@sergej.pp.ru>
 
 pkgname=bctoolbox
-pkgver=5.0.32
+pkgver=5.0.66
 pkgrel=1
 pkgdesc='A library written in C that allows you to create and run audio and video streams'
-arch=(x86_64 powerpc64le powerpc)
-url='https://github.com/BelledonneCommunications/bctoolbox'
+arch=(x86_64 powerpc64le powerpc riscv64)
+url='https://gitlab.linphone.org/'
 license=(GPL)
 depends=(mbedtls bcunit)
 makedepends=(cmake)
-source=(https://github.com/BelledonneCommunications/bctoolbox/archive/$pkgver/$pkgname-$pkgver.tar.gz)
-sha256sums=('f9a460339567914626bd218889c9c136c703c006c5087c81a4333c8379c6b836')
+source=(https://gitlab.linphone.org/BC/public/bctoolbox/-/archive/$pkgver/$pkgname-$pkgver.tar.bz2)
+sha256sums=('6e8c0ff800fffebc07ef465a33a1c0f1809664e546791e2dca2f6e4f23c27196')
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
